--- a/data/cards/11962031.yaml
+++ b/data/cards/11962031.yaml
@@ -2,25 +2,30 @@ konami_id: 18908
 password: 11962031
 name:
   en: Salamangreat of Fire
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grosalamander des Feuers
+  es: Salamangrande de Fuego
+  fr: Salamangrande du Feu
+  it: Salamagna di Fuoco
+  pt: Salamagrande de Fogo
   ja: サラマングレイト・オブ・ファイア
   ja_romaji: Saramangureito Obu Faia
   ko: 샐러맨그레이트 오브 파이어
-  ko_rr:
+  ko_rr: Saelleomaen-geureiteu Obeu Paieo
   zh-TW:
   zh-CN: 火炎之转生炎兽
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 Level 4 or lower "Salamangreat" monster from your Deck to your hand, except "Salamangreat of Fire", also you cannot Special Summon monsters for the rest of this turn, except FIRE monsters. At the start of the Damage Step, if a Cyberse monster you control battles: You can banish this card from your GY; destroy that monster you control. You can only use each effect of "Salamangreat of Fire" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Grosalamander“-Monster der Stufe 4 oder niedriger von deinem Deck hinzufügen, außer „Grosalamander des Feuers“, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung beschwören, außer FEUER Monstern. Am Beginn des Damage Steps, falls ein Cyberse-Monster kämpft, das du kontrollierst: Du kannst diese Karte von deinem Friedhof verbannen; zerstöre jenes Monster, das du kontrollierst. Du kannst jeden Effekt von „Grosalamander des Feuers“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 monstruo "Salamangrande" de Nivel 4 o menor en tu Deck, excepto "Salamangrande de Fuego", y además no puedes Invocar monstruos de Modo Especial por el resto de este turno, excepto monstruos de FUEGO. Al comienzo del Damage Step, si un monstruo Ciberso que controlas batalla: puedes desterrar esta carta en tu Cementerio; destruye ese monstruo que controlas. Sólo puedes usar cada efecto de "Salamangrande de Fuego" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez ajouter 1 monstre "Salamangrande" de max. Niveau 4 ("Salamangrande du Feu" exclu) depuis votre Deck à votre main, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (monstres FEU exclus) le reste de ce tour. Au début de la Damage Step, si un monstre Cyberse que vous contrôlez combat : vous pouvez bannir cette carte depuis votre Cimetière ; détruisez le monstre que vous contrôlez. Vous ne pouvez utiliser chaque effet de "Salamangrande du Feu" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 mostro "Salamagna" di Livello 4 o inferiore dal tuo Deck alla tua mano, eccetto "Salamagna di Fuoco", inoltre non puoi Evocare Specialmente mostri per il resto di questo turno, eccetto mostri FUOCO. All'inizio del Damage Step, se un mostro Cyberso che controlli combatte: puoi bandire questa carta dal tuo Cimitero; distruggi quel mostro che controlli. Puoi utilizzare ogni effetto di "Salamagna di Fuoco" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro "Salamagrande" de Nível 4 ou menos do seu Deck à sua mão, exceto "Salamagrande de Fogo" e, além disso, você não pode Invocar monstros por Invocação-Especial pelo resto deste turno, exceto monstros de FOGO. No começo da Etapa de Dano, se um monstro Ciberso que você controla batalhar: você pode banir este card do seu Cemitério; destrua esse monstro que você controla. Você só pode usar cada efeito de "Salamagrande de Fogo" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「サラマングレイト・オブ・ファイア」を除く、レベル４以下の「サラマングレイト」モンスター１体をデッキから手札に加える。この効果の発動後、ターン終了時まで自分は炎属性モンスターしか特殊召喚できない。②：自分のサイバース族モンスターが戦闘を行うダメージステップ開始時に、墓地のこのカードを除外して発動できる。その自分のモンスターを破壊する。
   ko: |-
