--- a/data/cards/19027895.yaml
+++ b/data/cards/19027895.yaml
@@ -2,25 +2,30 @@ konami_id: 18914
 password: 19027895
 name:
   en: Salamangreat Revive
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grosalamander-Wiederbelebung
+  es: Salamangrande Reanimada
+  fr: Réanimation Salamangrande
+  it: Rivivificazione Salamagna
+  pt: Reviver Salamagrande
   ja: サラマングレイト・リヴァイブ
   ja_romaji: Saramangureito Rivaibu
   ko: 샐러맨그레이트 리바이브
-  ko_rr:
+  ko_rr: Saelleomaen-geureiteu Ribaibeu
   zh-TW:
   zh-CN: 转生炎兽的复生
 text:
   en: |-
     Target 1 FIRE monster in your GY; Special Summon it. You can banish this card from your GY, then target 1 "Salamangreat" monster you control and 1 monster in your GY with the same name; shuffle that monster from the GY into the Deck, and if you do, that monster you control gains ATK equal to its original ATK until the end of this turn. You can only use each effect of "Salamangreat Revive" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 1 FEUER Monster in deinem Friedhof; beschwöre es als Spezialbeschwörung. Du kannst diese Karte von deinem Friedhof verbannen und dann 1 „Grosalamander“-Monster, das du kontrollierst, und 1 Monster mit demselben Namen in deinem Friedhof wählen; mische jenes Monster vom Friedhof ins Deck und falls du dies tust, erhält jenes Monster, das du kontrollierst, bis zum Ende dieses Spielzugs ATK in Höhe seiner Grund-ATK. Du kannst jeden Effekt von „Grosalamander-Wiederbelebung“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Selecciona 1 monstruo de FUEGO en tu Cementerio; Invócalo de Modo Especial. Puedes desterrar esta carta en tu Cementerio, y después seleccionar 1 monstruo "Salamangrande" que controles y 1 monstruo en tu Cementerio con el mismo nombre; baraja al Deck ese monstruo en el Cementerio y, si lo haces, ese monstruo que controlas gana ATK igual a su ATK original hasta el final de este turno. Sólo puedes usar cada efecto de "Salamangrande Reanimada" una vez por turno.
+  fr: |-
+    Ciblez 1 monstre FEU dans votre Cimetière ; Invoquez-le Spécialement. Vous pouvez bannir cette carte depuis votre Cimetière, puis ciblez 1 monstre "Salamangrande" que vous contrôlez et 1 monstre dans votre Cimetière du même nom ; mélangez le monstre depuis le Cimetière dans le Deck, et si vous le faites, le monstre que vous contrôlez gagne une ATK égale à son ATK d'origine jusqu'à la fin de ce tour. Vous ne pouvez utiliser chaque effet de "Réanimation Salamangrande" qu'une fois par tour.
+  it: |-
+    Scegli come bersaglio 1 mostro FUOCO nel tuo Cimitero; Evocalo Specialmente. Puoi bandire questa carta dal tuo Cimitero, poi scegliere come bersaglio 1 mostro "Salamagna" che controlli e 1 mostro nel tuo Cimitero con lo stesso nome; mischia quel mostro dal Cimitero nel Deck e, se lo fai, quel mostro che controlli guadagna ATK pari al suo ATK originale fino alla fine di questo turno. Puoi utilizzare ogni effetto di "Rivivificazione Salamagna" una sola volta per turno.
+  pt: |-
+    Escolha 1 monstro de FOGO no seu Cemitério; Invoque-o por Invocação-Especial. Você pode banir este card do seu Cemitério e, depois, escolha 1 monstro "Salamagrande" que você controla e 1 monstro no seu Cemitério com o mesmo nome; embaralhe o monstro do Cemitério no Deck e, se isso acontecer, esse monstro que você controla ganha ATK igual ao seu ATK original até o final deste turno. Você só pode usar cada efeito de "Reviver Salamagrande" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：墓地のこのカードを除外し、自分フィールドの「サラマングレイト」モンスター１体と、自分の墓地の同名モンスター１体を対象として発動できる。その墓地のモンスターをデッキに戻し、その自分フィールドのモンスターの攻撃力はターン終了時まで自身の元々の攻撃力分アップする。
   ko: |-
