--- a/data/cards/19688343.yaml
+++ b/data/cards/19688343.yaml
@@ -2,15 +2,15 @@ konami_id: 18928
 password: 19688343
 name:
   en: Battlin' Boxing Cross Counter
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Unermüdliche Box-Crosskonter
+  es: Contracruzado de los Boxeadores
+  fr: Contre Croisé de la Boxe Indomptable
+  it: Contrattacco Incrociato Pugilistico Indomito
+  pt: Contra-ataque dos Boxeadores Obstinados
   ja: バーニングナックル・クロスカウンター
   ja_romaji: Bāningu Nakkuru Kurosu Kauntā
   ko: 버닝나클 크로스 카운터
-  ko_rr:
+  ko_rr: Beoningnakeul Keuroseu Kaunteo
   zh-TW:
   zh-CN: 燃烧拳交叉反击
 text:
@@ -18,11 +18,26 @@ text:
     When your opponent activates a monster effect: Destroy 1 "Battlin' Boxer" or "Number" Xyz Monster you control, and if you do, negate the activation, and if you do that, destroy that monster, then you can apply the following effect.
     ● Special Summon 1 "Battlin' Boxer" Xyz Monster from your Extra Deck with a different name than the first monster, and if you do, attach this card to it as material.
     You can only activate 1 "Battlin' Boxing Cross Counter" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn dein Gegner einen Monstereffekt aktiviert: Zerstöre 1 „Unermüdlicher Boxer“- oder „Nummer“-Xyz-Monster, das du kontrollierst, und falls du dies tust, annulliere die Aktivierung und falls du dies tust, zerstöre jenes Monster, dann kannst du den folgenden Effekt ausführen.
+    ● Beschwöre 1 „Unermüdlicher Boxer“-Xyz-Monster mit einem unterschiedlichen Namen als das erste Monster als Spezialbeschwörung von deinem Extra Deck und falls du dies tust, hänge diese Karte als Material daran an.
+    Du kannst nur 1 „Unermüdliche Box-Crosskonter“ pro Spielzug aktivieren.
+  es: |-
+    Cuando tu adversario activa un efecto de monstruo: destruye 1 Monstruo Xyz "Boxeador Indómito" o "Número" que controles y, si lo haces, niega la activación y, si haces eso, destruye ese monstruo, y después puedes aplicar el siguiente efecto.
+    ● Invoca de Modo Especial, desde tu Deck Extra, 1 Monstruo Xyz "Boxeador Indómito" con nombre diferente al del primer monstruo y, si lo haces, acóplale esta carta como material.
+    Sólo puedes activar 1 "Contracruzado de los Boxeadores" por turno.
+  fr: |-
+    Lorsque votre adversaire active un effet de monstre : détruisez 1 Monstre Xyz "Boxeur Indomptable" ou "Numéro" que vous contrôlez, et si vous le faites, annulez l'activation, et si vous faites ça, détruisez le monstre, puis vous pouvez appliquer l'effet suivant.
+    ● Invoquez Spécialement 1 Monstre Xyz "Boxeur Indomptable" depuis votre Extra Deck de nom différent du premier monstre, et si vous le faites, attachez-lui cette carte comme Matériel.
+    Vous ne pouvez activer qu'1 "Contre Croisé de la Boxe Indomptable" par tour.
+  it: |-
+    Quando il tuo avversario attiva l'effetto di un mostro: distruggi 1 Mostro Xyz "Pugile Indomito" o "Numero" che controlli e, se lo fai, annulla l'attivazione e, se fai quello, distruggi quel mostro, poi puoi applicare il seguente effetto.
+    ● Evoca Specialmente dal tuo Extra Deck 1 Mostro Xyz "Pugile Indomito" con un nome diverso dal primo mostro e, se lo fai, attacca questa carta a esso come materiale.
+    Puoi attivare solo 1 "Contrattacco Incrociato Pugilistico Indomito" per turno.
+  pt: |-
+    Quando seu oponente ativar um efeito de monstro: destrua 1 Monstro Xyz "Boxeador Obstinado" ou "Número" que você controla e, se isso acontecer, negue a ativação e, se isso acontecer, destrua esse monstro e, depois, você pode aplicar o seguinte efeito.
+    ● Invoque por Invocação-Especial 1 Monstro Xyz "Boxeador Obstinado" do seu Deck Adicional com um nome diferente que o do primeiro monstro e, se isso acontecer, associe este card a ele como matéria.
+    Você só pode ativar 1 "Contra-ataque dos Boxeadores Obstinados" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：相手がモンスターの効果を発動した時に発動できる。自分フィールドの、「ＢＫ」Ｘモンスターか「Ｎｏ．」Ｘモンスター１体を破壊し、その発動を無効にし破壊する。その後、以下の効果を適用できる。
     ●破壊した自分のモンスターとはカード名が異なる「ＢＫ」Ｘモンスター１体をＥＸデッキから特殊召喚し、このカードをそのモンスターのＸ素材とする。
