--- a/data/cards/52198054.yaml
+++ b/data/cards/52198054.yaml
@@ -10,22 +10,22 @@ name:
   ja: ブレイズ・キャノン・マガジン
   ja_romaji: Bureizu Kyanon Magajin
   ko: 브레이즈 캐논 매거진
-  ko_rr:
+  ko_rr: Beulleijeu Kaenon Maegeojin
   zh-TW:
   zh-CN: 烈焰加农炮弹匣
 text:
   en: |-
     This card's name becomes "Tri-Blaze Accelerator" while in the Spell & Trap Zone. During the Main Phase: You can send 1 "Volcanic" card from your hand to the GY, and if you do, draw 1 card. You can only use this effect of "Blaze Accelerator Reload" once per turn. During the Main Phase: You can banish this card from your GY; send 1 "Volcanic" card from your Deck to the GY.
   de: |-
-    Der Name dieser Karte wird zu „Dreifacher Glutbeschleuniger“, solange sie in der Zauber- & Fallenzone liegt. Während der Main Phase eines beliebigen Spielers: Du kannst 1 „Vulkanisch“-Karte von deiner Hand auf den Friedhof legen und falls du dies tust, ziehe 1 Karte. Du kannst diesen Effekt von „Glutbeschleuniger nachladen“ nur einmal pro Spielzug verwenden. Während der Main Phase eines beliebigen Spielers: Du kannst diese Karte von deinem Friedhof verbannen; lege 1 „Vulkanisch“-Karte von deinem Deck auf den Friedhof.
+    Der Name dieser Karte wird zu „Dreifacher Glutbeschleuniger“, solange sie in der Zauber- & Fallenzone liegt. Während der Main Phase: Du kannst 1 „Vulkanisch“-Karte von deiner Hand auf den Friedhof legen und falls du dies tust, ziehe 1 Karte. Du kannst diesen Effekt von „Glutbeschleuniger nachladen“ nur einmal pro Spielzug verwenden. Während der Main Phase: Du kannst diese Karte von deinem Friedhof verbannen; lege 1 „Vulkanisch“-Karte von deinem Deck auf den Friedhof.
   es: |-
-    El nombre de esta carta se convierte en "Acelerador de Llama Triple" mientras esté en la Zona de Magia y Trampas. Durante la Main Phase de cualquier jugador: puedes mandar al Cementerio 1 carta "Volcánico/a" en tu mano y, si lo haces, roba 1 carta. Sólo puedes usar este efecto de "Recarga del Acelerador de Llama" una vez por turno. Durante la Main Phase de cualquier jugador: puedes desterrar esta carta en tu Cementerio; manda al Cementerio 1 carta "Volcánico/a" en tu Deck.
+    El nombre de esta carta se convierte en "Acelerador de Llama Triple" mientras esté en la Zona de Magia y Trampas. Durante la Main Phase: puedes mandar al Cementerio 1 carta "Volcánico/a" en tu mano y, si lo haces, roba 1 carta. Sólo puedes usar este efecto de "Recarga del Acelerador de Llama" una vez por turno. Durante la Main Phase: puedes desterrar esta carta en tu Cementerio; manda al Cementerio 1 carta "Volcánico/a" en tu Deck.
   fr: |-
-    Le nom de cette carte devient "Accélérateur Tri-Flammes" tant qu'elle est dans la Zone Magie & Piège. Durant la Main Phase de chaque joueur : vous pouvez envoyer 1 carte "Volcanique" depuis votre main au Cimetière, et si vous le faites, piochez 1 carte. Vous ne pouvez utiliser cet effet de "Rechargement Accélérateur de Flammes" qu'une fois par tour. Durant la Main Phase de chaque joueur : vous pouvez bannir cette carte depuis votre Cimetière ; envoyez 1 carte "Volcanique" depuis votre Deck au Cimetière.
+    Le nom de cette carte devient "Accélérateur Tri-Flammes" tant qu'elle est dans la Zone Magie & Piège. Durant la Main Phase : vous pouvez envoyer 1 carte "Volcanique" depuis votre main au Cimetière, et si vous le faites, piochez 1 carte. Vous ne pouvez utiliser cet effet de "Rechargement Accélérateur de Flammes" qu'une fois par tour. Durant la Main Phase : vous pouvez bannir cette carte depuis votre Cimetière ; envoyez 1 carte "Volcanique" depuis votre Deck au Cimetière.
   it: |-
-    Il nome di questa carta diventa "Accelleratore Tri-Fiammata" mentre è nella Zona Magia & Trappole. Durante la Main Phase di qualsiasi giocatore: puoi mandare 1 carta "Vulcanico" dalla tua mano al Cimitero e, se lo fai, pesca 1 carta. Puoi utilizzare questo effetto di "Ricarica Accelleratore Fiammata" una sola volta per turno. Durante la Main Phase di qualsiasi giocatore: puoi bandire questa carta dal tuo Cimitero; manda 1 carta "Vulcanico" dal tuo Deck al Cimitero.
+    Il nome di questa carta diventa "Acceleratore Tri-Fiammata" mentre è nella Zona Magie & Trappole. Durante la Main Phase: puoi mandare 1 carta "Vulcanico" dalla tua mano al Cimitero e, se lo fai, pesca 1 carta. Puoi utilizzare questo effetto di "Ricarica Acceleratore Fiammata" una sola volta per turno. Durante la Main Phase: puoi bandire questa carta dal tuo Cimitero; manda 1 carta "Vulcanico" dal tuo Deck al Cimitero.
   pt: |-
-    O nome deste card se torna "Tr-Acelerador de Explosão" enquanto estiver na Zona de Magia & Armadilha. Durante o turno de qualquer duelista: você pode enviar 1 card "Vulcânico(a)" da sua mão para o Cemitério e, se isso acontecer, compre 1 card. Você só pode usar este efeito de "Recarregar Acelerador de Explosão" uma vez por turno. Durante a Face Principal de qualquer duelista: você pode banir este card do seu Cemitério; envie 1 card "Vulcânico(a)" do seu Deck para o Cemitério.
+    O nome deste card se torna "Tri-Acelerador de Explosão" enquanto ele estiver na Zona de Magias & Armadilhas. Durante a Fase Principal: você pode enviar 1 card "Vulcânico(a)" da sua mão para o Cemitério e, se isso acontecer, compre 1 card. Você só pode usar este efeito de "Recarregar Acelerador de Explosão" uma vez por turno. Durante a Fase Principal: você pode banir este card do seu Cemitério; envie 1 card "Vulcânico(a)" do seu Deck para o Cemitério.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：このカードのカード名は、魔法＆罠ゾーンに存在する限り「ブレイズ・キャノン－トライデント」として扱う。②：自分・相手のメインフェイズに発動できる。手札から「ヴォルカニック」カード１枚を墓地へ送り、自分は１枚ドローする。③：自分・相手のメインフェイズに、墓地のこのカードを除外して発動できる。デッキから「ヴォルカニック」カード１枚を墓地へ送る。
   ko: |-
