--- a/data/cards/54529134.yaml
+++ b/data/cards/54529134.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Target 1 "Salamangreat" Link Monster you control; Special Summon 1 "Salamangreat" Link Monster with the same name from your Extra Deck, using that monster you control as the entire material. (This is treated as a Link Summon.) You can only activate 1 "Salamangreat Transcendence" per turn.
   de: |-
-    Wähle 1 „Grosalamander“-Linkmonster, das du kontrollierst; beschwöre 1 „Grosalamander“-Linkmonster mit demselben Namen als Spezialbeschwörung von deinem Extra Deck und verwende dafür das Monster, das du kontrollierst, als das gesamte Material. (Dies wird als Linkbeschwörung behandelt.) Du kannst nur 1 „Grosalamander-Erhabenheit“ pro Spielzug aktivieren.
+    Wähle 1 „Grosalamander“-Linkmonster, das du kontrollierst; beschwöre 1 „Grosalamander“-Linkmonster mit demselben Namen als Spezialbeschwörung von deinem Extra Deck und verwende dafür jenes Monster, das du kontrollierst, als das gesamte Material. (Dies wird als Linkbeschwörung behandelt.) Du kannst nur 1 „Grosalamander-Erhabenheit“ pro Spielzug aktivieren.
   es: |-
-    Selecciona 1 Monstruo de Enlace "Salamangrande" que controles; Invoca de Modo Especial, desde tu Deck Extra, 1 Monstruo de Enlace "Salamangrande" con el mismo nombre, usando ese monstruo que controlas como todo el material. (Esto se trata como una Invocación por Enlace). Sólo puedes activar 1 "Salamangrande Trascendencia" por turno.
+    Selecciona 1 Monstruo de Enlace "Salamangrande" que controles; Invoca de Modo Especial, desde tu Deck Extra, 1 Monstruo de Enlace "Salamangrande" con el mismo nombre, usando ese monstruo que controles como todo el material. (Esto se trata como una Invocación por Enlace). Sólo puedes activar 1 "Salamangrande Trascendencia" por turno.
   fr: |-
-    Ciblez 1 Monstre Lien "Salamangrande" que vous contrôlez ; Invoquez Spécialement 1 Monstre Lien "Salamangrande" de même nom depuis votre Extra Deck, en utilisant le monstre que vous contrôlez comme tout le Matériel. (Ceci est traité comme une Invocation Lien.) Vous ne pouvez activer qu'1 "Transcendance Salamangrande" par tour.
+    Ciblez 1 Monstre Lien "Salamangrande" que vous contrôlez ; Invoquez Spécialement 1 Monstre Lien "Salamangrande" du même nom depuis votre Extra Deck, en utilisant le monstre que vous contrôlez comme tout le Matériel. (Ceci est traité comme une Invocation Lien.) Vous ne pouvez activer qu'1 "Transcendance Salamangrande" par tour.
   it: |-
     Scegli come bersaglio 1 Mostro Link "Salamagna" che controlli; Evoca Specialmente 1 Mostro Link "Salamagna" con lo stesso nome dal tuo Extra Deck, utilizzando quel mostro che controlli come l'intero materiale. (Questa viene considerata come un'Evocazione Link.) Puoi attivare solo 1 "Trascendenza Salamagna" per turno.
   pt: |-
-    Escolha 1 Monstro Link "Salamagrande" que você controla; Invoque por Invocação-Especial 1 Monstro Link "Salamagrande" com o mesmo nome do seu Deck Adicional, usando esse monstro que você controla como toda a matéria. (Isso é considerado como uma Invocação-Link.) Você só pode ativar 1 "Transcendência Salamagrande" por turno.
+    Escolha 1 Monstro Link "Salamagrande" que você controla; Invoque por Invocação-Especial 1 Monstro Link "Salamagrande" com o mesmo nome do seu Deck Adicional, usando esse monstro que você controla como toda a matéria. (Isso é considerado uma Invocação-Link.) Você só pode ativar 1 "Transcendência Salamagrande" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「サラマングレイト」Ｌモンスター１体を対象として発動できる。その自分のモンスター１体のみを素材として同名の「サラマングレイト」Ｌモンスター１体をＬ召喚扱いでＥＸデッキから特殊召喚する。
   ko: |-
