--- a/data/cards/59627393.yaml
+++ b/data/cards/59627393.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>１０５ <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> <ruby>流<rt>りゅう</rt></ruby><ruby>星<rt>せい</rt></ruby>のセスタス
   ja_romaji: Nanbāzu Hyakugo Bāningu Nakkurā Ryūsei no Sesutasu
   ko: No.105 <ruby>BK<rt>버닝나쿠라</rt></ruby> 유성의 세스터스
-  ko_rr:
+  ko_rr: Neombeojeu Baek-o Beoningnakura Yuseong-ui Seseuteoseu
   zh-TW: No.105 燃燒拳鬥士 流星手帶
   zh-CN: No.105 燃烧拳击手 流星之指套拳士
 text:
@@ -19,19 +19,19 @@ text:
     Once per Chain, during the Battle Step, if your "Battlin' Boxer" monster battles an opponent's monster (Quick Effect): You can detach 1 material from this card; negate the effects of that opponent's monster while it is face-up until the end of this turn, that monster you control cannot be destroyed by that battle, also your opponent takes any battle damage you would have taken from that battle.
   de: |-
     3 Monster der Stufe 4
-    Während des Battle Steps eines beliebigen Spielers, falls ein „Unermüdlicher Boxer“-Monster, das du kontrollierst, gegen ein Monster deines Gegners kämpft: Du kannst 1 Xyz-Material von dieser Karte abhängen; annulliere bis zum Ende des Spielzugs die Effekte des Monsters deines Gegners, das Monster, das du kontrollierst, kann durch den Kampf nicht zerstört werden und dein Gegner erhält den Kampfschaden, den du aus dem Kampf erhalten hättest.
+    Einmal pro Kette, während des Battle Steps, falls dein „Unermüdlicher Boxer“-Monster gegen ein Monster eines Gegners kämpft (Schnelleffekt): Du kannst 1 Material von dieser Karte abhängen; annulliere bis zum Ende dieses Spielzugs die Effekte jenes Monsters des Gegners, solange es offen liegt, jenes Monster, das du kontrollierst, kann durch jenen Kampf nicht zerstört werden, zusätzlich erhält dein Gegner den Kampfschaden, den du aus jenem Kampf erhalten hättest.
   es: |-
     3 monstruos de Nivel 4
-    Durante el Battle Step de cualquier jugador, si un monstruo "Boxeador Indómito" que controlas batalla con un monstruo de tu adversario: puedes desacoplar de esta carta 1 Material Xyz; hasta el final del turno, niega los efectos del monstruo de tu adversario, ese monstruo que controlas no puede ser destruido en esa batalla, y además tu adversario recibe cualquier daño de batalla que hubieras recibido tú de esa batalla.
+    Una vez por Cadena, durante el Battle Step, si tu monstruo "Boxeador Indómito" batalla con un monstruo del adversario (Efecto Rápido): puedes desacoplar 1 material de esta carta; niega los efectos de ese monstruo del adversario mientras esté boca arriba hasta el final de este turno, ese monstruo que controlas no puede ser destruido en esa batalla, y además tu adversario recibe cualquier daño de batalla que fueras a recibir tú de esa batalla.
   fr: |-
     3 monstres de Niveau 4
-    Durant la Battle Step de chaque joueur, si un monstre "Boxeur Indomptable" que vous contrôlez combat un monstre de votre adversaire : vous pouvez détacher 1 Matériel Xyz de cette carte ; jusqu'à la fin du tour, annulez les effets du monstre de votre adversaire, le monstre que vous contrôlez ne peut pas être détruit par ce combat, et aussi, votre adversaire reçoit les dommages de combat que vous auriez dû recevoir de ce combat.
+    Une fois par Chaîne, durant la Battle Step, si votre monstre "Boxeur Indomptable" combat un monstre de l'adversaire (Effet Rapide) : vous pouvez détacher 1 Matériel de cette carte ; annulez les effets du monstre de l'adversaire tant qu'il est face recto jusqu'à la fin de ce tour, le monstre que vous contrôlez ne peut pas être détruit par ce combat, et aussi, votre adversaire reçoit les dommages de combat que vous auriez dû recevoir de ce combat.
   it: |-
     3 mostri di Livello 4
-    Durante il Battle Step di qualsiasi giocatore, se un mostro "Pugile Indomito" che controlli combatte con un mostro dell'avversario: puoi staccare 1 Materiale Xyz da questa carta; annulla gli effetti del mostro dell'avversario fino alla fine del turno, quel mostro che controlli non può essere distrutto in quella battaglia e inoltre il tuo avversario subisce qualsiasi danno da combattimento che avresti subito tu da quella battaglia.
+    Una volta per Catena, durante il Battle Step, se un tuo mostro "Pugile Indomito" combatte con un mostro dell'avversario (Effetto Rapido): puoi staccare 1 materiale da questa carta; annulla gli effetti di quel mostro dell'avversario mentre è scoperto fino alla fine di questo turno, quel mostro che controlli non può essere distrutto in quella battaglia, inoltre il tuo avversario subisce qualsiasi danno da combattimento che avresti subito tu da quella battaglia.
   pt: |-
     3 monstros de Nível 4
-    Durante a Fase de Batalha de qualquer duelista, se um monstro "Boxeador Obstinado" que você controla batalhar um monstro do oponente: você pode desassociar 1 Matéria Xyz deste card; negue os efeitos do monstro do oponente até o final do turno, esse monstro que você controla não pode ser destruído nessa batalha e, além disso, seu oponente sofre todo o dano de batalha que você teria sofrido nessa batalha.
+    Uma vez por Corrente, durante a Etapa de Batalha, se um monstro "Boxeador Obstinado" seu batalhar um monstro do oponente (Efeito Rápido): você pode desassociar 1 matéria deste card; negue os efeitos desse monstro do oponente enquanto ele estiver com a face para cima até o final deste turno, esse monstro que você controla não pode ser destruído nessa batalha e, além disso, seu oponente sofre todo o dano de batalha que você teria sofrido nessa batalha.
   ja: |-
     レベル４モンスター×３
     ①：自分の「ＢＫ」モンスターが相手モンスターと戦闘を行う自分・相手のバトルステップに、このカードのＸ素材を１つ取り除いて発動できる（同一チェーン上では１度まで）。ターン終了時までその相手モンスターの効果は表側表示の間だけ無効化され、その自分のモンスターはその戦闘では破壊されず、その戦闘で発生する自分への戦闘ダメージは代わりに相手が受ける。
