--- a/data/cards/59805313.yaml
+++ b/data/cards/59805313.yaml
@@ -2,15 +2,15 @@ konami_id: 18917
 password: 59805313
 name:
   en: Volcanic Rimfire
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vulkanisches Randfeuer
+  es: Percusión Anular Volcánica
+  fr: Percussion Annulaire Volcanique
+  it: Percussione Anulare Vulcanica
+  pt: Circunfogo Vulcânico
   ja: ヴォルカニック・リムファイア
   ja_romaji: Vorukanikku Rimufaia
   ko: 볼캐닉 림파이어
-  ko_rr:
+  ko_rr: Bolkaenik Rimpaieo
   zh-TW:
   zh-CN: 火山种缘发弹
 text:
@@ -18,11 +18,26 @@ text:
     If this card is sent to the GY: You can activate 1 of these effects (but you can only use each effect of "Volcanic Rimfire" once per turn);
     ● Banish this card from your GY, and if you do, send 1 "Volcanic" monster from your Deck to the GY, except "Volcanic Rimfire".
     ● Banish 1 "Blaze Accelerator" card from your face-up field or GY, and if you do, place 1 "Blaze Accelerator" Continuous Spell/Trap from your hand or Deck face-up on your field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte auf den Friedhof gelegt wird: Du kannst 1 dieser Effekte aktivieren (aber du kannst jeden Effekt von „Vulkanisches Randfeuer“ nur einmal pro Spielzug verwenden);
+    ● Verbanne diese Karte von deinem Friedhof und falls du dies tust, lege 1 „Vulkanisch“-Monster von deinem Deck auf den Friedhof, außer „Vulkanisches Randfeuer“.
+    ● Verbanne 1 „Glutbeschleuniger“-Karte offen von deiner Spielfeldseite oder deinem Friedhof und falls du dies tust, lege 1 Permanente/n „Glutbeschleuniger“-Zauber/Falle von deiner Hand oder deinem Deck offen auf deine Spielfeldseite.
+  es: |-
+    Si esta carta es mandada al Cementerio: puedes activar 1 de estos efectos (pero sólo puedes usar cada efecto de "Percusión Anular Volcánica" una vez por turno);
+    ● Destierra esta carta en tu Cementerio y, si lo haces, manda al Cementerio 1 monstruo "Volcánico/a" en tu Deck, excepto "Percusión Anular Volcánica".
+    ● Destierra 1 carta "Acelerador de Llama" en tu Campo boca arriba o Cementerio y, si lo haces, pon 1 Mágica/Trampa Continua "Acelerador de Llama" en tu mano o Deck boca arriba en tu Campo.
+  fr: |-
+    Si cette carte est envoyée au Cimetière : vous pouvez activer 1 de ces effets (mais vous ne pouvez utiliser chaque effet de "Percussion Annulaire Volcanique" qu'une fois par tour) ;
+    ● Bannissez cette carte depuis votre Cimetière, et si vous le faites, envoyez 1 monstre "Volcanique" ("Percussion Annulaire Volcanique" exclu) depuis votre Deck au Cimetière.
+    ● Bannissez 1 carte "Accélérateur de Flammes" depuis votre Terrain face recto ou Cimetière, et si vous le faites, placez 1 Magie Continue/Piège Continu "Accélérateur de Flammes" depuis votre main ou Deck face recto sur votre Terrain.
+  it: |-
+    Se questa carta viene mandata al Cimitero: puoi attivare 1 di questi effetti (ma puoi utilizzare ogni effetto di "Percussione Anulare Vulcanica" una sola volta per turno);
+    ● Bandisci questa carta dal tuo Cimitero e, se lo fai, manda 1 mostro "Vulcanico" dal tuo Deck al Cimitero, eccetto "Percussione Anulare Vulcanica".
+    ● Bandisci 1 carta "Acceleratore Fiammata" dal tuo Terreno scoperto o Cimitero e, se lo fai, metti 1 Magia/Trappola Continua "Acceleratore Fiammata" dalla tua mano o Deck scoperta sul tuo Terreno.
+  pt: |-
+    Se este card for enviado para o Cemitério: você pode ativar 1 desses efeitos (mas você só pode usar cada efeito de "Circunfogo Vulcânico" uma vez por turno);
+    ● Bana este card do seu Cemitério e, se isso acontecer, envie 1 monstro "Vulcânico(a)" do seu Deck para o Cemitério, exceto "Circunfogo Vulcânico".
+    ● Bana 1 card "Acelerador de Explosão" do seu campo com a face para cima ou Cemitério e, se isso acontecer, coloque com a face para cima no seu campo 1 Magia/Armadilha Contínua "Acelerador de Explosão" da sua mão ou do Deck.
   ja: |-
     ①：このカードが墓地へ送られた場合、以下の効果から１つを選択して発動できる（このカード名の以下の効果はそれぞれ１ターンに１度しか選択できない）。●墓地のこのカードを除外し、デッキから「ヴォルカニック・リムファイア」以外の「ヴォルカニック」モンスター１体を墓地へ送る。●自分のフィールド（表側表示）・墓地から「ブレイズ・キャノン」カード１枚を除外し、手札・デッキから「ブレイズ・キャノン」永続魔法・永続罠カード１枚を自分フィールドに表側表示で置く。
   ko: |-
