--- a/data/cards/79867938.yaml
+++ b/data/cards/79867938.yaml
@@ -10,22 +10,22 @@ name:
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> ヘッドギア
   ja_romaji: Bāningu Nakkurā Heddogia
   ko: <ruby>BK<rt>버닝나쿠라</rt></ruby> 헤드기어
-  ko_rr:
+  ko_rr: Beoningnakura Hedeugieo
   zh-TW: 燃燒拳鬥士 拳擊頭盔
   zh-CN: 燃烧拳击手 护头拳手
 text:
   en: |-
     When this card is Normal Summoned: You can send 1 "Battlin' Boxer" monster from your Deck to the GY. The first time this Attack Position card would be destroyed by battle each turn, it is not destroyed.
   de: |-
-    Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Unermüdlicher Boxer“-Monster von deinem Deck auf den Friedhof legen. Einmal pro Spielzug kann diese Karte in offener Angriffsposition nicht durch Kampf zerstört werden.
+    Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Unermüdlicher Boxer“-Monster von deinem Deck auf den Friedhof legen. Das erste Mal in jedem Spielzug, dass diese Karte in Angriffsposition durch Kampf zerstört würde, wird sie nicht zerstört.
   es: |-
-    Cuando esta carta es Invocada de Modo Normal: puedes mandar al Cementerio 1 monstruo "Boxeador Indómito" en tu Deck. Una vez por turno, esta carta en Posición de Ataque boca arriba no puede ser destruida en batalla.
+    Cuando esta carta es Invocada de Modo Normal: puedes mandar al Cementerio 1 monstruo "Boxeador Indómito" en tu Deck. La primera vez que esta carta en Posición de Ataque fuera a ser destruida en batalla cada turno, no es destruida.
   fr: |-
-    Lorsque cette carte est Invoquée Normalement : vous pouvez envoyer 1 monstre "Boxeur Indomptable" depuis votre Deck au Cimetière. Une fois par tour, cette carte en Position d'Attaque face recto ne peut pas être détruite au combat.
+    Lorsque cette carte est Invoquée Normalement : vous pouvez envoyer 1 monstre "Boxeur Indomptable" depuis votre Deck au Cimetière. La première fois que cette carte en Position d'Attaque va être détruite au combat chaque tour, elle n'est pas détruite.
   it: |-
-    Quando questa carta viene Evocata Normalmente: puoi mandare 1 mostro "Pugile Indomito" dal tuo Deck al Cimitero. Una volta per turno, questa carta scoperta in Posizione di Attacco non può essere distrutta in battaglia.
+    Quando questa carta viene Evocata Normalmente: puoi mandare 1 mostro "Pugile Indomito" dal tuo Deck al Cimitero. La prima volta che questa carta in Posizione di Attacco sta per essere distrutta in battaglia ogni turno, non viene distrutta.
   pt: |-
-    Quando este card for Invocado por Invocação-Normal: você pode enviar um monstro "Boxeador Obstinado" do seu Deck para o Cemitério. Uma vez por turno, este card com a face para cima em Posição de Ataque não pode ser destruído em batalha.
+    Quando este card for Invocado por Invocação-Normal: você pode enviar 1 monstro "Boxeador Obstinado" do seu Deck para o Cemitério. Na primeira vez que este card em Posição de Ataque seria destruído em batalha a cada turno, ele não é destruído.
   ja: |-
     ①：このカードが召喚した時に発動できる。デッキから「ＢＫ」モンスター１体を墓地へ送る。②：攻撃表示のこのカードは１ターンに１度だけ戦闘では破壊されない。
   ko: |-
