--- a/data/cards/84138874.yaml
+++ b/data/cards/84138874.yaml
@@ -2,25 +2,30 @@ konami_id: 18921
 password: 84138874
 name:
   en: Volcanic Inferno
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vulkanisches Inferno
+  es: Infierno Volcánico
+  fr: Brasier Volcanique
+  it: Inferno Vulcanico
+  pt: Inferno Vulcânico
   ja: ヴォルカニック・インフェルノ
   ja_romaji: Vorukanikku Inferuno
   ko: 볼캐닉 인페르노
-  ko_rr:
+  ko_rr: Bolkaenik Inpereuno
   zh-TW:
   zh-CN:
 text:
   en: |-
     When your opponent activates a monster effect on the field: You can banish 1 Pyro monster from your GY; inflict 500 damage to your opponent, then, if you banished a "Volcanic" monster to activate this effect, you can negate that effect. During your opponent's End Phase: You can target up to 2 of your "Volcanic" monsters that are banished and/or in your GY; place them on the bottom of your Deck in any order. You can only use each effect of "Volcanic Inferno" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn dein Gegner einen Monstereffekt auf dem Spielfeld aktiviert: Du kannst 1 Pyro-Monster von deinem Friedhof verbannen; füge deinem Gegner 500 Schaden zu, dann, falls du ein „Vulkanisch“-Monster verbannt hast, um diesen Effekt zu aktivieren, kannst du jenen Effekt annullieren. Während der End Phase deines Gegners: Du kannst bis zu 2 deiner „Vulkanisch“-Monster wählen, die verbannt sind und/oder sich in deinem Friedhof befinden; lege sie in beliebiger Reihenfolge unter dein Deck. Du kannst jeden Effekt von „Vulkanisches Inferno“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando tu adversario activa el efecto de un monstruo en el Campo: puedes desterrar 1 monstruo Piro en tu Cementerio; inflige 500 puntos de daño a tu adversario y después, si desterraste un monstruo "Volcánico/a" para activar este efecto, puedes negar ese efecto. Durante la End Phase de tu adversario: puedes seleccionar hasta 2 de tus monstruos "Volcánico/a" que estén desterrados y/o en tu Cementerio; ponlos en la parte inferior de tu Deck en cualquier orden. Sólo puedes usar cada efecto de "Infierno Volcánico" una vez por turno.
+  fr: |-
+    Lorsque votre adversaire active un effet de monstre sur le Terrain : vous pouvez bannir 1 monstre Pyro depuis votre Cimetière ; infligez 500 points de dommages à votre adversaire, puis, si vous avez banni un monstre "Volcanique" pour activer cet effet, vous pouvez annuler l'effet. Durant la End Phase de votre adversaire : vous pouvez cibler max. 2 de vos monstres "Volcanique" qui sont bannis et/ou dans votre Cimetière ; placez-les au-dessous de votre Deck dans l'ordre de votre choix. Vous ne pouvez utiliser chaque effet de "Brasier Volcanique" qu'une fois par tour.
+  it: |-
+    Quando il tuo avversario attiva l'effetto di un mostro sul Terreno: puoi bandire 1 mostro Pyro dal tuo Cimitero; infliggi 500 danni al tuo avversario, poi, se hai bandito un mostro "Vulcanico" per attivare questo effetto, puoi annullare quell'effetto. Durante la End Phase del tuo avversario: puoi scegliere come bersaglio fino a 2 dei tuoi mostri "Vulcanico" che sono banditi e/o nel tuo Cimitero; mettili in fondo al tuo Deck in qualsiasi ordine. Puoi utilizzare ogni effetto di "Inferno Vulcanico" una sola volta per turno.
+  pt: |-
+    Quando seu oponente ativar um efeito de monstro no campo: você pode banir 1 monstro Piro do seu Cemitério; cause 500 de dano ao seu oponente e, depois, se você baniu um monstro "Vulcânico(a)" para ativar este efeito, você pode negar o efeito. Durante a Fase Final do seu oponente: você pode escolher até 2 dos seus monstros "Vulcânico(a)" que estiverem banidos e/ou no seu Cemitério; coloque-os no fundo do seu Deck em qualquer ordem. Você só pode usar cada efeito de "Inferno Vulcânico" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：相手がフィールドのモンスターの効果を発動した時、自分の墓地から炎族モンスター１体を除外して発動できる。相手に５００ダメージを与える。「ヴォルカニック」モンスターを除外して発動した場合、さらにその発動した効果を無効にできる。②：相手エンドフェイズに、自分の墓地・除外状態の「ヴォルカニック」モンスターを２体まで対象として発動できる。そのモンスターを好きな順番でデッキの下に戻す。
   ko: |-
