--- a/data/cards/84755744.yaml
+++ b/data/cards/84755744.yaml
@@ -2,25 +2,30 @@ konami_id: 18910
 password: 84755744
 name:
   en: Salamangreat Tiger
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grosalamander Tiger
+  es: Salamangrande Tigre
+  fr: Salamangrande Tigre
+  it: Salamagna Tigre
+  pt: Salamagrande Tigre
   ja: <ruby>転生炎獣<rt>サラマングレイト</rt></ruby>ティガー
   ja_romaji: Saramangureito Tigā
   ko: 샐러맨그레이트 티거
-  ko_rr:
+  ko_rr: Saelleomaen-geureiteu Tigeo
   zh-TW:
   zh-CN: 转生炎兽 跳虎
 text:
   en: |-
     You can discard 1 other "Salamangreat" card; Special Summon this card from your hand. You can only use this effect of "Salamangreat Tiger" once per turn. If this card you control would be used as Synchro Material for a FIRE monster, you can treat it as a non-Tuner. Once per turn: You can increase or decrease this card's Level by 1.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst 1 andere „Grosalamander“-Karte abwerfen; beschwöre diese Karte als Spezialbeschwörung von deiner Hand. Du kannst diesen Effekt von „Grosalamander Tiger“ nur einmal pro Spielzug verwenden. Falls diese Karte, die du kontrollierst, als Synchromaterial für ein FEUER Monster verwendet würde, kannst du sie als Nicht-Empfänger behandeln. Einmal pro Spielzug: Du kannst die Stufe dieser Karte um 1 erhöhen oder verringern.
+  es: |-
+    Puedes descartar otra carta "Salamangrande"; Invoca esta carta de Modo Especial desde tu mano. Sólo puedes usar este efecto de "Salamangrande Tigre" una vez por turno. Si esta carta que controlas fuera a ser usada como Material de Sincronía para un monstruo de FUEGO, puedes tratarla como un monstruo que no sea Cantante. Una vez por turno: puedes aumentar o reducir en 1 el Nivel de esta carta.
+  fr: |-
+    Vous pouvez défausser 1 autre carte "Salamangrande" ; Invoquez Spécialement cette carte depuis votre main. Vous ne pouvez utiliser cet effet de "Salamangrande Tigre" qu'une fois par tour. Si cette carte que vous contrôlez va être utilisée comme Matériel Synchro pour un monstre FEU, vous pouvez la traiter comme non-Syntoniseur. Une fois par tour : vous pouvez augmenter ou réduire le Niveau de cette carte de 1.
+  it: |-
+    Puoi scartare 1 altra carta "Salamagna"; Evoca Specialmente questa carta dalla tua mano. Puoi utilizzare questo effetto di "Salamagna Tigre" una sola volta per turno. Se questa carta che controlli sta per essere utilizzata come Materiale Synchro per un mostro FUOCO, puoi considerarla come un non-Tuner. Una volta per turno: puoi aumentare o diminuire il Livello di questa carta di 1.
+  pt: |-
+    Você pode descartar 1 outro card "Salamagrande"; Invoque este card por Invocação-Especial da sua mão. Você só pode usar este efeito de "Salamagrande Tigre" uma vez por turno. Se este card que você controla seria usado como Matéria Sincro para um monstro de FOGO, você pode considerá-lo como um não-Regulador. Uma vez por turno: você pode aumentar ou diminuir o Nível deste card em 1.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：手札から他の「サラマングレイト」カード１枚を捨てて発動できる。このカードを手札から特殊召喚する。②：自分フィールドのこのカードを炎属性ＳモンスターのＳ素材とする場合、このカードをチューナー以外のモンスターとして扱う事ができる。③：１ターンに１度、自分メインフェイズに発動できる。このカードのレベルを１つ上げるか下げる。
   ko: |-
