--- a/data/cards/85250352.yaml
+++ b/data/cards/85250352.yaml
@@ -2,25 +2,30 @@ konami_id: 18918
 password: 85250352
 name:
   en: Volcanic Blaze Accelerator
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vulkanischer Glutbeschleuniger
+  es: Acelerador de Llama Volcánico
+  fr: Accélérateur de Flammes Volcanique
+  it: Acceleratore Fiammata Vulcanico
+  pt: Acelerador de Explosão Vulcânico
   ja: ヴォルカニック・ブレイズ・キャノン
   ja_romaji: Vorukanikku Bureizu Kyanon
   ko: 볼캐닉 브레이즈 캐논
-  ko_rr:
+  ko_rr: Bolkaenik Beureijeu Kaenon
   zh-TW:
   zh-CN:
 text:
   en: |-
     Activate this card by sending 1 "Blaze Accelerator" from your hand, Deck, or face-up field to the GY. You can only control 1 "Volcanic Blaze Accelerator". Once per turn, during your Main Phase: You can Special Summon 1 "Volcanic" monster from your hand. Once per turn: You can target 1 face-up monster your opponent controls; send 1 Level 1 Pyro monster from your Deck to the GY, and if you do, destroy that monster.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Aktiviere diese Karte, indem du 1 „Glutbeschleuniger“ von deiner Hand, deinem Deck oder offen von deiner Spielfeldseite auf den Friedhof legst. Du kannst nur 1 „Vulkanischer Glutbeschleuniger“ kontrollieren. Einmal pro Spielzug, während deiner Main Phase: Du kannst 1 „Vulkanisch“-Monster als Spezialbeschwörung von deiner Hand beschwören. Einmal pro Spielzug: Du kannst 1 offenes Monster wählen, das dein Gegner kontrolliert; lege 1 Pyro-Monster der Stufe 1 von deinem Deck auf den Friedhof und falls du dies tust, zerstöre jenes Monster.
+  es: |-
+    Activa esta carta mandando al Cementerio 1 "Acelerador de Llama" en tu mano, Deck o Campo boca arriba. Sólo puedes controlar 1 "Acelerador de Llama Volcánico". Una vez por turno, durante tu Main Phase: puedes Invocar de Modo Especial, desde tu mano, 1 monstruo "Volcánico/a". Una vez por turno: puedes seleccionar 1 monstruo boca arriba que controle tu adversario; manda al Cementerio 1 monstruo Piro de Nivel 1 en tu Deck y, si lo haces, destruye ese monstruo.
+  fr: |-
+    Activez cette carte en envoyant 1 "Accélérateur de Flammes" depuis votre main, Deck ou Terrain face recto au Cimetière. Vous ne pouvez contrôler qu'1 "Accélérateur de Flammes Volcanique". Une fois par tour, durant votre Main Phase : vous pouvez Invoquer Spécialement 1 monstre "Volcanique" depuis votre main. Une fois par tour : vous pouvez cibler 1 monstre face recto contrôlé par votre adversaire ; envoyez 1 monstre Pyro de Niveau 1 depuis votre Deck au Cimetière, et si vous le faites, détruisez le monstre.
+  it: |-
+    Attiva questa carta mandando 1 "Acceleratore Fiammata" dalla tua mano, Deck o Terreno scoperto al Cimitero. Puoi controllare solo 1 "Acceleratore Fiammata Vulcanico". Una volta per turno, durante la tua Main Phase: puoi Evocare Specialmente 1 mostro "Vulcanico" dalla tua mano. Una volta per turno: puoi scegliere come bersaglio 1 mostro scoperto controllato dal tuo avversario; manda 1 mostro Pyro di Livello 1 dal tuo Deck al Cimitero e, se lo fai, distruggi quel mostro.
+  pt: |-
+    Ative este card ao enviar para o Cemitério 1 "Acelerador de Explosão" da sua mão, do Deck ou do campo com a face para cima. Você só pode controlar 1 "Acelerador de Explosão Vulcânico". Uma vez por turno, durante sua Fase Principal: você pode Invocar por Invocação-Especial 1 monstro "Vulcânico(a)" da sua mão. Uma vez por turno: você pode escolher 1 monstro com a face para cima que seu oponente controla; envie 1 monstro Piro de Nível 1 do seu Deck para o Cemitério e, se isso acontecer, destrua esse monstro.
   ja: |-
     手札・デッキ・フィールド（表側表示）から「ブレイズ・キャノン」１枚を墓地へ送ってこのカードを発動できる。①：「ヴォルカニック・ブレイズ・キャノン」は自分フィールドに１枚しか表側表示で存在できない。②：１ターンに１度、自分メインフェイズに発動できる。手札から「ヴォルカニック」モンスター１体を特殊召喚する。③：１ターンに１度、相手フィールドの表側表示モンスター１体を対象として発動できる。デッキから炎族・レベル１モンスター１体を墓地へ送り、対象のモンスターを破壊する。
   ko: |-
