--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1615,8 +1615,8 @@ Battlin' Boxer:
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby>
   ja_romaji: Bāningu Nakkurā
   ko: <ruby>BK<rt>버닝나쿠라</rt></ruby>
-  ko_rr: Beoning Nakura
-  zh-TW: 燃燒拳鬥士
+  ko_rr: Beoningnakura
+  zh-TW:
   zh-CN:
 Zefra:
   de: Zefra
