--- a/data/cards/10140443.yaml
+++ b/data/cards/10140443.yaml
@@ -2,26 +2,36 @@ konami_id: 18911
 password: 10140443
 name:
   en: Salamangreat Burst Gryphon
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grosalamander Ausbruchsgreif
+  es: Salamangrande Grifo del Estallido
+  fr: Salamangrande Griffon Éclatant
+  it: Salamagna Esplosione Grifone
+  pt: Salamagrande Grifo Explosivo
   ja: <ruby>転生炎獣<rt>サラマングレイト</rt></ruby>バースト・グリフォン
   ja_romaji: Saramangureito Bāsuto Gurifon
   ko: 샐러맨그레이트 버스트 그리폰
-  ko_rr:
+  ko_rr: Saelleomaen-geureiteu Beoseuteu Geuripon
   zh-TW:
   zh-CN: 转生炎兽 爆裂狮鹫
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
     You can target 1 Level 7 or lower FIRE monster in your GY; Special Summon it, and if you do, reduce this card's Level by that monster's original Level, also you cannot Special Summon monsters for the rest of this turn, except FIRE monsters. If this card is Synchro Summoned using "Salamangreat Burst Gryphon" as material: You can activate this effect; during the next Standby Phase, Special Summon 1 monster from your GY. You can only use each effect of "Salamangreat Burst Gryphon" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    1 Empfänger + 1+ Nicht-Empfänger-Monster
+    Du kannst 1 FEUER Monster der Stufe 7 oder niedriger in deinem Friedhof wählen; beschwöre es als Spezialbeschwörung und falls du dies tust, verringere die Stufe dieser Karte um die Grund-Stufe jenes Monsters, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung beschwören, außer FEUER Monstern. Falls diese Karte als Synchrobeschwörung beschworen und „Grosalamander Ausbruchsgreif“ als Material dafür verwendet wird: Du kannst diesen Effekt aktivieren; beschwöre während der nächsten Standby Phase 1 Monster als Spezialbeschwörung von deinem Friedhof. Du kannst jeden Effekt von „Grosalamander Ausbruchsgreif“ nur einmal pro Spielzug verwenden.
+  es: |-
+    1 Cantante + 1+ monstruos que no sean Cantantes
+    Puedes seleccionar 1 monstruo de FUEGO de Nivel 7 o menor en tu Cementerio; Invócalo de Modo Especial y, si lo haces, reduce el Nivel de esta carta tanto como el Nivel original de ese monstruo, y además no puedes Invocar monstruos de Modo Especial por el resto de este turno, excepto monstruos de FUEGO. Si esta carta es Invocada por Sincronía usando "Salamangrande Grifo del Estallido" como material: puedes activar este efecto; durante la próxima Standby Phase, Invoca 1 monstruo de Modo Especial desde tu Cementerio. Sólo puedes usar cada efecto de "Salamangrande Grifo del Estallido" una vez por turno.
+  fr: |-
+    1 Syntoniseur + 1+ monstre non-Syntoniseur
+    Vous pouvez cibler 1 monstre FEU de max. Niveau 7 dans votre Cimetière ; Invoquez-le Spécialement, et si vous le faites, réduisez le Niveau de cette carte du Niveau d'origine du monstre, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (monstres FEU exclus) le reste de ce tour. Si cette carte est Invoquée par Synchronisation en utilisant "Salamangrande Griffon Éclatant" comme Matériel : vous pouvez activer cet effet ; durant la prochaine Standby Phase, Invoquez Spécialement 1 monstre depuis votre Cimetière. Vous ne pouvez utiliser chaque effet de "Salamangrande Griffon Éclatant" qu'une fois par tour.
+  it: |-
+    1 Tuner + 1+ mostri non-Tuner
+    Puoi scegliere come bersaglio 1 mostro FUOCO di Livello 7 o inferiore nel tuo Cimitero; Evocalo Specialmente e, se lo fai, riduci il Livello di questa carta del Livello originale di quel mostro, inoltre non puoi Evocare Specialmente mostri per il resto di questo turno, eccetto mostri FUOCO. Se questa carta viene Synchro Evocata utilizzando "Salamagna Esplosione Grifone" come materiale: puoi attivare questo effetto; durante la prossima Standby Phase, Evoca Specialmente 1 mostro dal tuo Cimitero. Puoi utilizzare ogni effetto di "Salamagna Esplosione Grifone" una sola volta per turno.
+  pt: |-
+    1 Regulador + 1+ monstros não-Reguladores
+    Você pode escolher 1 monstro de FOGO de Nível 7 ou menos no seu Cemitério; Invoque-o por Invocação-Especial e, se isso acontecer, reduza o Nível deste card pelo Nível original desse monstro e, além disso, você não pode Invocar monstros por Invocação-Especial pelo resto deste turno, exceto monstros de FOGO. Se este card for Invocado por Invocação-Sincro usando "Salamagrande Grifo Explosivo" como matéria: você pode ativar este efeito; durante a próxima Fase de Apoio, Invoque por Invocação-Especial 1 monstro do seu Cemitério. Você só pode usar cada efeito de "Salamagrande Grifo Explosivo" uma vez por turno.
   ja: |-
     チューナー＋チューナー以外のモンスター１体以上
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地のレベル７以下の炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚し、そのモンスターの元々のレベル分だけこのカードのレベルを下げる。このターン、自分は炎属性モンスターしか特殊召喚できない。②：このカードが「転生炎獣バースト・グリフォン」を素材としてＳ召喚した場合に発動できる。次のスタンバイフェイズに自分の墓地からモンスター１体を特殊召喚する。
