--- a/data/cards/10300821.yaml
+++ b/data/cards/10300821.yaml
@@ -2,15 +2,15 @@ konami_id: 18925
 password: 10300821
 name:
   en: "Number C79: Battlin' Boxer General Kaiser"
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: 'Nummer C79: Unermüdlicher Boxer General Kaiser'
+  es: 'Número C79: Boxeador Indómito General Kaiser'
+  fr: 'Numéro C79 : Boxeur Indomptable Général Kaiser'
+  it: 'Numero C79: Pugile Indomito Generale Kaiser'
+  pt: 'Número C79: Boxeador Obstinado General Kaiser'
   ja: <ruby>Ｃ<rt>カオス</rt></ruby><ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>７９ <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> <ruby>将<rt>しょう</rt></ruby><ruby>星<rt>せい</rt></ruby>のカエサル
   ja_romaji: Kaosu Nanbāzu Nanajūkyū Bāningu Nakkurā Shōsei no Kaesaru
-  ko: CNo.79 BK 장성의 카이사르
-  ko_rr:
+  ko: <ruby>CNo.<rt>카오스 넘버즈</rt></ruby>79 <ruby>BK<rt>버닝나쿠라</rt></ruby> 장성의 카이사르
+  ko_rr: Kaoseu Neombeojeu Chilsipgu Beoningnakura Jangseong-ui Kaisareu
   zh-TW:
   zh-CN: CNo.79 BK 将星之套环大拳帝
 text:
@@ -18,11 +18,26 @@ text:
     3 Level 5 monsters
     Gains 200 ATK for each material attached to it. Once per turn, when your opponent would Special Summon a monster(s) (Quick Effect): You can detach 2 materials from this card, and if you do, negate the Summon, and if you do that, destroy that monster(s). If this card has "Number 79: Battlin' Boxer Nova Kaiser" as material, it gains this effect.
     ● Once per turn, when an attack is declared involving your "Battlin' Boxer" monster and an opponent's monster: You can send 1 "Battlin' Boxer" monster from your hand or Deck to the GY, and if you do, attach that opponent's monster to this card as material.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    3 Monster der Stufe 5
+    Erhält für jedes an diese Karte angehängte Material 200 ATK. Einmal pro Spielzug, wenn dein Gegner ein oder mehr Monster als Spezialbeschwörung beschwören würde (Schnelleffekt): Du kannst 2 Material von dieser Karte abhängen und falls du dies tust, annulliere die Beschwörung und falls du dies tust, zerstöre jene Monster. Falls diese Karte „Nummer 79: Unermüdlicher Boxer Nova-Kaiser“ als Material hat, erhält sie diesen Effekt.
+    ● Einmal pro Spielzug, wenn ein Angriff deklariert wird, an dem dein „Unermüdlicher Boxer“-Monster und ein Monster eines Gegners beteiligt sind: Du kannst 1 „Unermüdlicher Boxer“-Monster von deiner Hand oder deinem Deck auf den Friedhof legen und falls du dies tust, hänge jenes Monster des Gegners als Material an diese Karte an.
+  es: |-
+    3 monstruos de Nivel 5
+    Gana 200 ATK por cada material acoplado a él. Una vez por turno, cuando tu adversario fuera a Invocar de Modo Especial uno o más monstruos (Efecto Rápido): puedes desacoplar 2 materiales de esta carta y, si lo haces, niega la Invocación y, si haces eso, destruye ese o esos monstruos. Si esta carta tiene "Número 79: Boxeador Indómito Nova Kaiser" como material, gana este efecto.
+    ● Una vez por turno, cuando es declarado un ataque que involucre tu monstruo "Boxeador Indómito" y un monstruo del adversario: puedes mandar al Cementerio 1 monstruo "Boxeador Indómito" en tu mano o Deck y, si lo haces, acopla ese monstruo del adversario a esta carta como material.
+  fr: |-
+    3 monstres de Niveau 5
+    Gagne 200 ATK pour chaque Matériel qui lui est attaché. Une fois par tour, lorsque votre adversaire va Invoquer Spécialement un ou plusieurs monstres (Effet Rapide) : vous pouvez détacher 2 Matériels de cette carte, et si vous le faites, annulez l'Invocation, et si vous faites ça, détruisez ces monstres. Si cette carte a "Numéro 79 : Boxeur Indomptable Nova Kaiser" comme Matériel, elle gagne cet effet.
+    ● Une fois par tour, lorsqu'une attaque impliquant votre monstre "Boxeur Indomptable" et un monstre de l'adversaire est déclarée : vous pouvez envoyer 1 monstre "Boxeur Indomptable" depuis votre main ou Deck au Cimetière, et si vous le faites, attachez le monstre de l'adversaire à cette carte comme Matériel.
+  it: |-
+    3 mostri di Livello 5
+    Guadagna 200 ATK per ogni materiale attaccato a esso. Una volta per turno, quando il tuo avversario sta per Evocare Specialmente uno o più mostri (Effetto Rapido): puoi staccare 2 materiali da questa carta e, se lo fai, annulla l'Evocazione e, se fai quello, distruggi quei mostri. Se questa carta ha "Numero 79: Pugile Indomito Nova Kaiser" come materiale, essa guadagna questo effetto.
+    ● Una volta per turno, quando viene dichiarato un attacco che coinvolge un tuo mostro "Pugile Indomito" e un mostro dell'avversario: puoi mandare 1 mostro "Pugile Indomito" dalla tua mano o Deck al Cimitero e, se lo fai, attacca quel mostro dell'avversario a questa carta come materiale.
+  pt: |-
+    3 monstros de Nível 5
+    Ganha 200 de ATK para cada matéria associada a ele. Uma vez por turno, quando seu oponente Invocaria um ou mais monstros por Invocação-Especial (Efeito Rápido): você pode desassociar 2 matérias deste card e, se isso acontecer, negue a Invocação e, se isso acontecer, destrua esse(s) monstro(s). Se este card tiver "Número 79: Boxeador Obstinado Kaiser Nova" como matéria, ele ganha este efeito.
+    ● Uma vez por turno, quando um ataque for declarado envolvendo um monstro "Boxeador Obstinado" seu e um monstro do oponente: você pode enviar para o Cemitério 1 monstro "Boxeador Obstinado" da sua mão ou do Deck e, se isso acontecer, associe esse monstro do oponente a este card como matéria.
   ja: |-
     レベル５モンスター×３
     ①：このカードの攻撃力はこのカードのＸ素材の数×２００アップする。②：１ターンに１度、相手がモンスターを特殊召喚する際に発動できる。このカードのＸ素材を２つ取り除き、それを無効にし破壊する。③：このカードが「Ｎｏ．７９ ＢＫ 新星のカイザー」をＸ素材としている場合、以下の効果を得る。●１ターンに１度、自分の「ＢＫ」モンスターが相手モンスターと戦闘を行う攻撃宣言時に発動できる。手札・デッキから「ＢＫ」モンスター１体を墓地へ送り、その相手モンスターをこのカードのＸ素材とする。
