--- a/data/cards/11522479.yaml
+++ b/data/cards/11522479.yaml
@@ -2,15 +2,15 @@ konami_id: 18922
 password: 11522479
 name:
   en: Battlin' Boxer Uppercutter
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Unermüdlicher Boxer Uppercutter
+  es: Boxeador Indómito Uppercut
+  fr: Boxeur Indomptable Uppercuteur
+  it: Pugile Indomito Montante
+  pt: Boxeador Obstinado de Gancho
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> アッパーカッター
   ja_romaji: Bāningu Nakkurā Appākattā
-  ko: BK 어퍼커터
-  ko_rr:
+  ko: <ruby>BK<rt>버닝나쿠라</rt></ruby> 어퍼커터
+  ko_rr: Beoningnakura Epeokeoteo
   zh-TW:
   zh-CN: BK 上勾拳手
 text:
@@ -19,11 +19,31 @@ text:
     ● Special Summon 1 "Battlin' Boxer" monster from your GY, except "Battlin’ Boxer Uppercutter".
     ● Set 1 "Counter" Counter Trap from your GY to your field.
     You can only use 1 "Battlin' Boxer Uppercutter" effect per turn, and only once that turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Unermüdlicher Boxer“-Monster oder 1 „Konter“-Konterfalle von deinem Deck hinzufügen, außer „Unermüdlicher Boxer Uppercutter“. Falls diese Karte durch einen Karteneffekt auf den Friedhof gelegt wird: Du kannst 1 dieser Effekte aktivieren;
+    ● Beschwöre 1 „Unermüdlicher Boxer“-Monster als Spezialbeschwörung von deinem Friedhof, außer „Unermüdlicher Boxer Uppercutter“.
+    ● Setze 1 „Konter“-Konterfalle von deinem Friedhof auf deine Spielfeldseite.
+    Du kannst nur 1 Effekt von „Unermüdlicher Boxer Uppercutter“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 monstruo "Boxeador Indómito" o 1 Trampa de Contraefecto "Contra" en tu Deck, excepto "Boxeador Indómito Uppercut". Si esta carta es mandada al Cementerio por efecto de una carta: puedes activar 1 de estos efectos;
+    ● Invoca de Modo Especial, desde tu Cementerio, 1 monstruo "Boxeador Indómito", excepto "Boxeador Indómito Uppercut".
+    ● Coloca en tu Campo 1 Trampa de Contraefecto "Contra" en tu Cementerio.
+    Sólo puedes usar 1 efecto de "Boxeador Indómito Uppercut" por turno, y sólo una vez ese turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez ajouter 1 monstre "Boxeur Indomptable" ("Boxeur Indomptable Uppercuteur" exclu) ou 1 Contre-Piège "Contre" depuis votre Deck à votre main. Si cette carte est envoyée au Cimetière par un effet de carte : vous pouvez activer 1 de ces effets ;
+    ● Invoquez Spécialement 1 monstre "Boxeur Indomptable" ("Boxeur Indomptable Uppercuteur" exclu) depuis votre Cimetière.
+    ● Posez 1 Contre-Piège "Contre" depuis votre Cimetière sur votre Terrain.
+    Vous ne pouvez utiliser qu'1 effet de "Boxeur Indomptable Uppercuteur" par tour, et uniquement une fois le tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 mostro "Pugile Indomito" o 1 Contro-Trappola "Contra" dal tuo Deck alla tua mano, eccetto "Pugile Indomito Montante". Se questa carta viene mandata al Cimitero dall'effetto di una carta: puoi attivare 1 di questi effetti;
+    ● Evoca Specialmente 1 mostro "Pugile Indomito" dal tuo Cimitero, eccetto "Pugile Indomito Montante".
+    ● Posiziona 1 Contro-Trappola "Contra" dal tuo Cimitero sul tuo Terreno.
+    Puoi utilizzare solo 1 effetto di "Pugile Indomito Montante" per turno, e solo una volta in quel turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro "Boxeador Obstinado" ou 1 Armadilha de Resposta "Contra" do seu Deck à sua mão, exceto "Boxeador Obstinado de Gancho". Se este card for enviado para o Cemitério por um efeito de card: você pode ativar 1 desses efeitos;
+    ● Invoque por Invocação-Especial 1 monstro "Boxeador Obstinado" do seu Cemitério, exceto "Boxeador Obstinado de Gancho".
+    ● Baixe 1 Armadilha de Resposta "Contra" do seu Cemitério no seu campo.
+    Você só pode usar 1 efeito de "Boxeador Obstinado de Gancho" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「ＢＫ アッパーカッター」以外の「ＢＫ」モンスター１体か「カウンター」カウンター罠カード１枚をデッキから手札に加える。②：このカードが効果で墓地へ送られた場合、以下の効果から１つを選択して発動できる。●自分の墓地から「ＢＫ アッパーカッター」以外の「ＢＫ」モンスター１体を特殊召喚する。●自分の墓地から「カウンター」カウンター罠カード１枚を自分フィールドにセットする。
   ko: |-
