--- a/data/cards/22411609.yaml
+++ b/data/cards/22411609.yaml
@@ -2,25 +2,30 @@ konami_id: 18916
 password: 22411609
 name:
   en: Volcanic Trooper
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vulkanischer Soldat
+  es: Soldado Volcánico
+  fr: Soldat Volcanique
+  it: Truppa Vulcanica
+  pt: Soldado Vulcânico
   ja: ヴォルカニック・トルーパー
   ja_romaji: Vorukanikku Torūpā
   ko: 볼캐닉 트루퍼
-  ko_rr:
+  ko_rr: Bolkaenik Teurupeo
   zh-TW:
   zh-CN: 火山种骑兵
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 "Volcanic" card from your Deck to your hand, except "Volcanic Trooper". You can discard 1 card; Special Summon 1 "Bomb Token" (Pyro/FIRE/Level 1/ATK 1000/DEF 1000) to your opponent's field. Each time 1 is destroyed, its controller takes 500 damage. You can only use each effect of "Volcanic Trooper" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 „Vulkanisch“-Karte von deinem Deck hinzufügen, außer „Vulkanischer Soldat“. Du kannst 1 Karte abwerfen; beschwöre 1 „Bombe-Spielmarke“ (Pyro/FEUER/Stufe 1/ATK 1000/DEF 1000) als Spezialbeschwörung auf die Spielfeldseite deines Gegners. Jedes Mal, wenn 1 zerstört wird, erhält ihr Beherrscher 500 Schaden. Du kannst jeden Effekt von „Vulkanischer Soldat“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si esta carta es Invocada de Modo Normal o Especial: puedes añadir a tu mano 1 carta "Volcánico/a" en tu Deck, excepto "Soldado Volcánico". Puedes descartar 1 carta; Invoca de Modo Especial 1 "Ficha Bomba" (Piro/FUEGO/Nivel 1/ATK 1000/DEF 1000) al Campo de tu adversario. Cada vez que 1 es destruida, su controlador recibe 500 puntos de daño. Sólo puedes usar cada efecto de "Soldado Volcánico" una vez por turno.
+  fr: |-
+    Si cette carte est Invoquée Normalement ou Spécialement : vous pouvez ajouter 1 carte "Volcanique" ("Soldat Volcanique" exclu) depuis votre Deck à votre main. Vous pouvez défausser 1 carte ; Invoquez Spécialement 1 "Jeton Bombe" (Pyro/FEU/Niveau 1/ATK 1000/DEF 1000) sur le Terrain de votre adversaire. Chaque fois qu'1 est détruit, son contrôleur reçoit 500 points de dommages. Vous ne pouvez utiliser chaque effet de "Soldat Volcanique" qu'une fois par tour.
+  it: |-
+    Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 carta "Vulcanico" dal tuo Deck alla tua mano, eccetto "Truppa Vulcanica". Puoi scartare 1 carta; Evoca Specialmente 1 "Segna-Bomba" (Pyro/FUOCO/Livello 1/ATK 1000/DEF 1000) sul Terreno del tuo avversario. Ogni volta che 1 viene distrutto, il suo controllore subisce 500 danni. Puoi utilizzare ogni effetto di "Truppa Vulcanica" una sola volta per turno.
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 card "Vulcânico(a)" do seu Deck à sua mão, exceto "Soldado Vulcânico". Você pode descartar 1 card; Invoque por Invocação-Especial 1 "Ficha de Bomba" (Piro/FOGO/Nível 1/ATK 1000/DEF 1000) no campo do seu oponente. Sempre que 1 for destruído, seu controlador sofre 500 de dano. Você só pode usar cada efeito de "Soldado Vulcânico" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「ヴォルカニック・トルーパー」以外の「ヴォルカニック」カード１枚を手札に加える。②：手札を１枚捨てて発動できる。相手フィールドに「ボムトークン」（炎族・炎・星１・攻／守１０００）１体を特殊召喚する。このトークンが破壊された時にそのコントローラーは５００ダメージを受ける。
   ko: |-
