--- a/data/cards/46412900.yaml
+++ b/data/cards/46412900.yaml
@@ -2,25 +2,30 @@ konami_id: 18915
 password: 46412900
 name:
   en: Volcanic Emperor
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Vulkanischer Kaiser
+  es: Emperador Volcánico
+  fr: Empereur Volcanique
+  it: Imperatore Vulcanico
+  pt: Imperador Vulcânico
   ja: ヴォルカニック・エンペラー
   ja_romaji: Vorukanikku Enperā
   ko: 볼캐닉 엠페러
-  ko_rr:
+  ko_rr: Bolkaenik Empereo
   zh-TW:
   zh-CN: 火山种皇帝
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by banishing 3 Pyro monsters or 1 "Blaze Accelerator" card from your face-up field and/or GY. You can only Special Summon "Volcanic Emperor" once per turn. When Summoned this way: You can inflict 500 damage to your opponent for each banished Pyro monster, then you can Set 1 "Volcanic" Trap directly from your Deck. Each time your opponent Special Summons a monster(s), inflict 500 damage to your opponent.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Kann nicht als Normalbeschwörung beschworen/gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand oder deinem Friedhof) beschworen werden, indem du 3 Pyro-Monster oder 1 „Glutbeschleuniger“-Karte offen von deiner Spielfeldseite und/oder deinem Friedhof verbannst. Du kannst „Vulkanischer Kaiser“ nur einmal pro Spielzug als Spezialbeschwörung beschwören. Wenn er auf diese Art beschworen wird: Du kannst deinem Gegner für jedes verbannte Pyro-Monster 500 Schaden zufügen, dann kannst du 1 „Vulkanisch“-Falle direkt von deinem Deck setzen. Jedes Mal, wenn dein Gegner ein oder mehr Monster als Spezialbeschwörung beschwört, füge deinem Gegner 500 Schaden zu.
+  es: |-
+    No puede ser Invocado de Modo Normal/Colocado. Debe ser Invocado de Modo Especial (desde tu mano o Cementerio) desterrando 3 monstruos Piro o 1 carta "Acelerador de Llama" en tu Campo boca arriba y/o Cementerio. Sólo puedes Invocar de Modo Especial "Emperador Volcánico" una vez por turno. Cuando es Invocado de esta forma: puedes infligir 500 puntos de daño a tu adversario por cada monstruo Piro desterrado, y después puedes Colocar 1 Trampa "Volcánico/a" directamente desde tu Deck. Cada vez que tu adversario Invoca uno o más monstruos de Modo Especial, inflige 500 puntos de daño a tu adversario.
+  fr: |-
+    Ni Invocable Normalement ni Posable Normalement. Uniquement Invocable Spécialement (depuis votre main ou Cimetière) en bannissant 3 monstres Pyro ou 1 carte "Accélérateur de Flammes" depuis votre Terrain face recto et/ou Cimetière. Vous ne pouvez Invoquer Spécialement "Empereur Volcanique" qu'une fois par tour. Lorsqu'elle est Invoquée de cette façon : vous pouvez infliger 500 points de dommages à votre adversaire pour chaque monstre Pyro banni, puis vous pouvez Poser 1 Piège "Volcanique" directement depuis votre Deck. Chaque fois que votre adversaire Invoque Spécialement un ou plusieurs monstres, infligez 500 points de dommages à votre adversaire.
+  it: |-
+    Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente (dalla tua mano o Cimitero) bandendo 3 mostri Pyro o 1 carta "Acceleratore Fiammata" dal tuo Terreno scoperto e/o Cimitero. Puoi Evocare Specialmente uno o più "Imperatore Vulcanico" una sola volta per turno. Quando viene Evocato in questo modo: puoi infliggere 500 danni al tuo avversario per ogni mostro Pyro bandito, poi puoi Posizionare 1 Trappola "Vulcanico" direttamente dal tuo Deck. Ogni volta che il tuo avversario Evoca Specialmente uno o più mostri, infliggi 500 danni al tuo avversario.
+  pt: |-
+    Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial (da sua mão ou do Cemitério) ao banir 3 monstros Piro ou 1 card "Acelerador de Explosão" do seu campo com a face para cima e/ou Cemitério. Você só pode Invocar "Imperador Vulcânico" por Invocação-Especial uma vez por turno. Quando Invocado desta forma: você pode causar 500 de dano ao seu oponente para cada monstro Piro banido e, depois, você pode Baixar 1 Armadilha "Vulcânico(a)" diretamente do seu Deck. Sempre que seu oponente Invocar um ou mais monstros por Invocação-Especial, cause 500 de dano ao seu oponente.
   ja: |-
     このカードは通常召喚できない。自分のフィールド（表側表示）・墓地から炎族モンスター３体か「ブレイズ・キャノン」カード１枚を除外した場合のみ手札・墓地から特殊召喚できる。自分は「ヴォルカニック・エンペラー」を１ターンに１度しか特殊召喚できない。①：この方法でこのカードが特殊召喚した時に発動できる。除外状態の炎族モンスターの数×５００ダメージを相手に与える。その後、デッキから「ヴォルカニック」罠カード１枚を自分フィールドにセットできる。②：相手がモンスターを特殊召喚する度に相手に５００ダメージを与える。
   ko: |-
