--- a/data/cards/46804536.yaml
+++ b/data/cards/46804536.yaml
@@ -2,15 +2,15 @@ konami_id: 18926
 password: 46804536
 name:
   en: Battlin' Boxer King Dempsey
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Unermüdlicher Boxer König Dempsey
+  es: Boxeador Indómito Rey Dempsey
+  fr: Boxeur Indomptable Roi Dempsey
+  it: Pugile Indomito Re Dempsey
+  pt: Boxeador Obstinado Rei Dempsey
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> キング・デンプシー
   ja_romaji: Bāningu Nakkurā Kingu Denpushī
-  ko: BK 킹 뎀프시
-  ko_rr:
+  ko: <ruby>BK<rt>버닝나쿠라</rt></ruby> 킹 뎀프시
+  ko_rr: Beoningnakura King Dempeusi
   zh-TW:
   zh-CN: BK 王者轮摆式移位拳手
 text:
@@ -19,11 +19,31 @@ text:
     If this card is Special Summoned: You can take 1 Level 4 or lower FIRE Warrior monster or 1 "Battlin' Boxing" Spell/Trap from your Deck, and either add it to your hand or send it to the GY. (Quick Effect): You can detach 1 material from a monster you control, and if you do, apply the following effect.
     ● Your opponent cannot target "Battlin' Boxer" monsters you control with card effects for the rest of this turn.
     You can only use each effect of "Battlin' Boxer King Dempsey" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    2 Monster der Stufe 4
+    Falls diese Karte als Spezialbeschwörung beschworen wird: Du kannst 1 FEUER Krieger-Monster der Stufe 4 oder niedriger oder 1 „Unermüdliche Box“-Zauber/Falle von deinem Deck nehmen und entweder deiner Hand hinzufügen oder auf den Friedhof legen. (Schnelleffekt): Du kannst 1 Material von einem Monster abhängen, das du kontrollierst, und falls du dies tust, wende den folgenden Effekt an.
+    ● Dein Gegner kann für den Rest dieses Spielzugs „Unermüdlicher Boxer“-Monster, die du kontrollierst, nicht als Ziel für Karteneffekte wählen.
+    Du kannst jeden Effekt von „Unermüdlicher Boxer König Dempsey“ nur einmal pro Spielzug verwenden.
+  es: |-
+    2 monstruos de Nivel 4
+    Si esta carta es Invocada de Modo Especial: puedes tomar 1 monstruo Guerrero de FUEGO de Nivel 4 o menor o 1 Mágica/Trampa "Boxeadores" en tu Deck y ya sea añadirlo a tu mano o mandarlo al Cementerio. (Efecto Rápido): puedes desacoplar 1 material de un monstruo que controles y, si lo haces, aplica el siguiente efecto.
+    ● Tu adversario no puede seleccionar con efectos de cartas monstruos "Boxeador Indómito" que controles por el resto de este turno.
+    Sólo puedes usar cada efecto de "Boxeador Indómito Rey Dempsey" una vez por turno.
+  fr: |-
+    2 monstres de Niveau 4
+    Si cette carte est Invoquée Spécialement : vous pouvez prendre 1 monstre FEU Guerrier de max. Niveau 4 ou 1 Magie/Piège "Boxe Indomptable" depuis votre Deck, et soit ajoutez-le à votre main soit envoyez-le au Cimetière. (Effet Rapide) : vous pouvez détacher 1 Matériel d'un monstre que vous contrôlez, et si vous le faites, appliquez l'effet suivant.
+    ● Votre adversaire ne peut pas cibler de monstres "Boxeur Indomptable" que vous contrôlez avec des effets de carte le reste de ce tour.
+    Vous ne pouvez utiliser chaque effet de "Boxeur Indomptable Roi Dempsey" qu'une fois par tour.
+  it: |-
+    2 mostri di Livello 4
+    Se questa carta viene Evocata Specialmente: puoi prendere 1 mostro FUOCO Guerriero di Livello 4 o inferiore o 1 Magia/Trappola "Pugilistico Indomito" dal tuo Deck e aggiungerlo alla tua mano oppure mandarlo al Cimitero. (Effetto Rapido): puoi staccare 1 materiale da un mostro che controlli e, se lo fai, applica il seguente effetto.
+    ● Il tuo avversario non può scegliere come bersaglio i mostri "Pugile Indomito" che controlli con gli effetti delle carte per il resto di questo turno.
+    Puoi utilizzare ogni effetto di "Pugile Indomito Re Dempsey" una sola volta per turno.
+  pt: |-
+    2 monstros de Nível 4
+    Se este card for Invocado por Invocação-Especial: você pode pegar 1 monstro Guerreiro de FOGO de Nível 4 ou menos ou 1 Magia/Armadilha "Boxeadores Obstinados" do seu Deck e adicioná-la à sua mão ou enviá-la para o Cemitério. (Efeito Rápido): você pode desassociar 1 matéria de um monstro que você controla e, se isso acontecer, aplique o seguinte efeito.
+    ● Seu oponente não pode escolher monstros "Boxeador Obstinado" que você controla como alvo de efeitos de card pelo resto deste turno.
+    Você só pode usar cada efeito de "Boxeador Obstinado Rei Dempsey" uma vez por turno.
   ja: |-
     レベル４モンスター×２
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。デッキからレベル４以下の戦士族・炎属性モンスター１体または「バーニングナックル」魔法・罠カード１枚を選び、手札に加えるか墓地へ送る。②：自分・相手ターンに発動できる。自分フィールドのＸ素材を１つ取り除き、以下の効果を適用する。●このターン中は自分フィールドの「ＢＫ」モンスターを相手は効果の対象にできない。
