--- a/data/cards/46898368.yaml
+++ b/data/cards/46898368.yaml
@@ -22,7 +22,7 @@ text:
     Falls dein Gegner mehr Karten kontrolliert als du: Wähle 1 Linkmonster, das dein Gegner kontrolliert; ziehe Karten in Höhe seiner Linkzahl. Du kannst nur 1 „Brennendes Ziehen“ pro Spielzug aktivieren. Du kannst in dem Spielzug, in dem du diese Karte aktivierst, keine Monster als Normal- oder Spezialbeschwörung beschwören, außer FEUER Monstern.
   es: |-
     (Esta carta se trata siempre como una carta "Salamangrande").
-    Si tu adversario controla más cartas que tú: selecciona 1 Monstruo de Enlace que controle tu adversario; roba tantas cartas como su Rating de Enlace. Sólo puedes activar 1 "Robo Ardiente" por turno. No puedes Invocar monstruos de Modo Normal o Especial en el turno en el que activaste esta carta, excepto monstruos de FUEGO.
+    Si tu adversario controla más cartas que tú: selecciona 1 Monstruo de Enlace que controle tu adversario; roba tantas cartas como su Rating de Enlace. Sólo puedes activar 1 "Robo Ardiente" por turno. No puedes Invocar monstruos de Modo Normal o Especial en el turno en el que activas esta carta, excepto monstruos de FUEGO.
   fr: |-
     (Cette carte est toujours traitée comme une carte "Salamangrande".)
     Si votre adversaire contrôle plus de cartes que vous : ciblez 1 Monstre Lien contrôlé par votre adversaire ; piochez un nombre de cartes égal à sa Classification Lien. Vous ne pouvez activer qu'1 "Pioche Ardente" par tour. Vous ne pouvez Invoquer ni Normalement ni Spécialement de monstres (monstres FEU exclus) le tour où vous activez cette carte.
