--- a/data/cards/52155219.yaml
+++ b/data/cards/52155219.yaml
@@ -20,29 +20,29 @@ text:
     ● Target 1 "Salamangreat" Link Monster you control that was Link Summoned using a monster with its same name as material; that Link Monster is unaffected by monster effects this turn, except its own.
     You can only activate 1 "Salamangreat Circle" per turn.
   de: |-
-    Aktiviere 1 dieser Effekte.
+    Aktiviere 1 dieser Effekte;
     ● Füge deiner Hand 1 „Grosalamander“-Monster von deinem Deck hinzu.
     ● Wähle 1 „Grosalamander“-Linkmonster, das du kontrollierst und das mit einem Monster mit demselben Namen als Material als Linkbeschwörung beschworen wurde; jenes Linkmonster bleibt in diesem Spielzug von Monstereffekten unberührt, außer von seinen eigenen.
     Du kannst nur 1 „Grosalamander-Kreis“ pro Spielzug aktivieren.
   es: |-
-    Activa 1 de estos efectos.
+    Activa 1 de estos efectos;
     ● Añade a tu mano 1 monstruo "Salamangrande" en tu Deck.
     ● Selecciona 1 Monstruo de Enlace "Salamangrande" que controles que fue Invocado por Enlace usando como material un monstruo con su mismo nombre; ese Monstruo de Enlace no es afectado por efectos de monstruos este turno, excepto los suyos.
     Sólo puedes activar 1 "Círculo Salamangrande" por turno.
   fr: |-
-    Activez 1 de ces effets.
+    Activez 1 de ces effets ;
     ● Ajoutez 1 monstre "Salamangrande" depuis votre Deck à votre main.
     ● Ciblez 1 Monstre Lien "Salamangrande" que vous contrôlez qui a été Invoqué par Lien en utilisant un monstre du même nom que celui-ci comme Matériel ; ce tour, le Monstre Lien n'est pas affecté par des effets de monstre (ses propres effets exclus).
     Vous ne pouvez activer qu'1 "Cercle Salamangrande" par tour.
   it: |-
-    Attiva 1 di questi effetti.
+    Attiva 1 di questi effetti;
     ● Aggiungi 1 mostro "Salamagna" dal tuo Deck alla tua mano.
     ● Scegli come bersaglio 1 Mostro Link "Salamagna" che controlli che è stato Evocato Link utilizzando un mostro con il suo stesso nome come materiale; quel Mostro Link è immune agli effetti dei mostri in questo turno, eccetto i suoi stessi.
     Puoi attivare solo 1 "Circolo Salamagna" per turno.
   pt: |-
-    Ative 1 desses efeitos.
+    Ative 1 desses efeitos;
     ● Adicione 1 monstro "Salamagrande" do seu Deck à sua mão.
-    ● Escolha 1 Monstro Link "Salamagrande" que você controla que foi Invocado por Invocação-Link usando um monstro com o mesmo nome como matéria; esse Monstro Link não é afetado por efeitos de monstro neste turno, exceto seus próprios.
+    ● Escolha 1 Monstro Link "Salamagrande" que você controla que foi Invocado por Invocação-Link usando um monstro com seu mesmo nome como matéria; esse Monstro Link não é afetado por efeitos de monstro neste turno, exceto seus próprios.
     Você só pode ativar 1 "Círculo Salamagrande" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。
