--- a/data/cards/57357130.yaml
+++ b/data/cards/57357130.yaml
@@ -2,25 +2,30 @@ konami_id: 18909
 password: 57357130
 name:
   en: Salamangreat Weasel
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grosalamander Wiesel
+  es: Salamangrande Comadreja
+  fr: Salamangrande Belette
+  it: Salamagna Donnola
+  pt: Salamagrande Doninha
   ja: <ruby>転生炎獣<rt>サラマングレイト</rt></ruby>ウィーゼル
   ja_romaji: Saramangureito Wīzeru
   ko: 샐러맨그레이트 위젤
-  ko_rr:
+  ko_rr: Saelleomaen-geureiteu Wijel
   zh-TW:
   zh-CN: 转生炎兽 黄鼬
 text:
   en: |-
     If you have 2 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand. If a "Salamangreat" Ritual, Fusion, Synchro, Xyz, or Link Monster(s) is Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can target 1 other "Salamangreat" monster in your GY; place this card on the bottom of your Deck, and if you do, Special Summon that monster to your opponent's field, then draw 1 card. You can only use each effect of "Salamangreat Weasel" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls du 2 oder mehr „Grosalamander“-Monster in deinem Friedhof hast: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Falls ein oder mehr „Grosalamander“-Ritual-, -Fusions-, -Synchro-, -Xyz- oder -Linkmonster als Spezialbeschwörung auf deine Spielfeldseite beschworen werden, solange sich diese Karte in deinem Friedhof befindet (außer während des Damage Steps): Du kannst 1 anderes „Grosalamander“-Monster in deinem Friedhof wählen; lege diese Karte unter dein Deck und falls du dies tust, beschwöre jenes Monster als Spezialbeschwörung auf die Spielfeldseite deines Gegners, dann ziehe 1 Karte. Du kannst jeden Effekt von „Grosalamander Wiesel“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Si tienes 2 o más monstruos "Salamangrande" en tu Cementerio: puedes Invocar esta carta de Modo Especial desde tu mano. Si uno o más Monstruos de Ritual, Fusión, Sincronía, Xyz o Enlace "Salamangrande" son Invocados de Modo Especial a tu Campo, mientras esta carta esté en tu Cementerio (excepto durante el Damage Step): puedes seleccionar otro monstruo "Salamangrande" en tu Cementerio; pon esta carta en la parte inferior de tu Deck y, si lo haces, Invoca ese monstruo de Modo Especial al Campo de tu adversario, y después roba 1 carta. Sólo puedes usar cada efecto de "Salamangrande Comadreja" una vez por turno.
+  fr: |-
+    Si vous avez min. 2 monstres "Salamangrande" dans votre Cimetière : vous pouvez Invoquer Spécialement cette carte depuis votre main. Si un ou plusieurs Monstres Rituel, Fusion, Synchro, Xyz ou Lien "Salamangrande" sont Invoqués Spécialement sur votre Terrain, tant que cette carte est dans votre Cimetière (sauf durant la Damage Step) : vous pouvez cibler 1 autre monstre "Salamangrande" dans votre Cimetière ; placez cette carte au-dessous de votre Deck, et si vous le faites, Invoquez Spécialement le monstre sur le Terrain de votre adversaire, puis piochez 1 carte. Vous ne pouvez utiliser chaque effet de "Salamangrande Belette" qu'une fois par tour.
+  it: |-
+    Se hai 2 o più mostri "Salamagna" nel tuo Cimitero: puoi Evocare Specialmente questa carta dalla tua mano. Se uno più Mostri Rituale, Fusione, Synchro, Xyz o Link "Salamagna" vengono Evocati Specialmente sul tuo Terreno, mentre questa carta è nel tuo Cimitero (eccetto durante il Damage Step): puoi scegliere come bersaglio 1 altro mostro "Salamagna" nel tuo Cimitero; metti questa carta in fondo al tuo Deck e, se lo fai, Evoca Specialmente quel mostro sul Terreno del tuo avversario, poi pesca 1 carta. Puoi utilizzare ogni effetto di "Salamagna Donnola" una sola volta per turno.
+  pt: |-
+    Se você tiver 2 ou mais monstros "Salamagrande" no seu Cemitério: você pode Invocar este card por Invocação-Especial da sua mão. Se um ou mais Monstros de Ritual, de Fusão, Sincro, Xyz ou Link "Salamagrande" forem Invocados por Invocação-Especial no seu campo, enquanto este card estiver no seu Cemitério (exceto durante a Etapa de Dano): você pode escolher 1 outro monstro "Salamagrande" no seu Cemitério; coloque este card no fundo do seu Deck e, se isso acontecer, Invoque esse monstro por Invocação-Especial no campo do seu oponente e, depois, compre 1 card. Você só pode usar cada efeito de "Salamagrande Doninha" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の「サラマングレイト」モンスターが２体以上の場合に発動できる。このカードを手札から特殊召喚する。②：このカードが墓地に存在する状態で、自分フィールドに「サラマングレイト」儀式・融合・Ｓ・Ｘ・Ｌモンスターが特殊召喚された場合、このカード以外の自分の墓地の「サラマングレイト」モンスター１体を対象として発動できる。このカードをデッキの一番下に戻し、対象のモンスターを相手フィールドに特殊召喚する。その後、自分は１枚ドローする。
   ko: |-
