--- a/data/cards/68144350.yaml
+++ b/data/cards/68144350.yaml
@@ -10,22 +10,22 @@ name:
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> スイッチヒッター
   ja_romaji: Bāningu Nakkurā Suicchihittā
   ko: <ruby>BK<rt>버닝나쿠라</rt></ruby> 스위치히터
-  ko_rr:
+  ko_rr: Beoningnakura Seuwichihiteo
   zh-TW: 燃燒拳鬥士 左右開弓拳手
   zh-CN: 燃烧拳击手 左右开弓拳手
 text:
   en: |-
     When this card is Normal Summoned: You can target 1 "Battlin' Boxer" monster in your GY; Special Summon it. You cannot Special Summon any monsters during the turn you activate this effect, except "Battlin' Boxer" monsters.
   de: |-
-    Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Unermüdlicher Boxer“-Monster in deinem Friedhof wählen; beschwöre das gewählte Ziel als Spezialbeschwörung. Du kannst während des Spielzugs, in dem du diesen Effekt aktivierst, keine Monster als Spezialbeschwörung beschwören, außer „Unermüdlicher Boxer“-Monstern.
+    Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Unermüdlicher Boxer“-Monster in deinem Friedhof wählen; beschwöre es als Spezialbeschwörung. Du kannst während des Spielzugs, in dem du diesen Effekt aktivierst, keine Monster als Spezialbeschwörung beschwören, außer „Unermüdlicher Boxer“-Monstern.
   es: |-
-    Cuando esta carta es Invocada de Modo Normal: puedes seleccionar 1 monstruo "Boxeador Indómito" en tu Cementerio; Invoca ese objetivo de Modo Especial. Durante el turno en el que activas este efecto, no puedes Invocar monstruos de Modo Especial, excepto monstruos "Boxeador Indómito".
+    Cuando esta carta es Invocada de Modo Normal: puedes seleccionar 1 monstruo "Boxeador Indómito" en tu Cementerio; Invócalo de Modo Especial. No puedes Invocar monstruos de Modo Especial durante el turno en el que activas este efecto, excepto monstruos "Boxeador Indómito".
   fr: |-
-    Lorsque cette carte est Invoquée Normalement : vous pouvez cibler 1 monstre "Boxeur Indomptable" dans votre Cimetière ; Invoquez Spécialement la cible. Vous ne pouvez pas Invoquer Spécialement de monstres (monstres "Boxeur Indomptable" exclus) durant le tour où vous activez cet effet.
+    Lorsque cette carte est Invoquée Normalement : vous pouvez cibler 1 monstre "Boxeur Indomptable" dans votre Cimetière ; Invoquez-le Spécialement. Vous ne pouvez pas Invoquer Spécialement de monstres (monstres "Boxeur Indomptable" exclus) durant le tour où vous activez cet effet.
   it: |-
-    Quando questa carta viene Evocata Normalmente: puoi scegliere come bersaglio 1 mostro "Pugile Indomito" nel tuo Cimitero; Evoca Specialmente quel bersaglio. Non puoi Evocare Specialmente nessun mostro nel turno in cui attivi questo effetto, eccetto mostri "Pugile Indomito".
+    Quando questa carta viene Evocata Normalmente: puoi scegliere come bersaglio 1 mostro "Pugile Indomito" nel tuo Cimitero; Evocalo Specialmente. Non puoi Evocare Specialmente nessun mostro durante il turno in cui attivi questo effetto, eccetto mostri "Pugile Indomito".
   pt: |-
-    Quando este card for Invocado por Invocação-Normal: você pode escolher 1 monstro "Boxeador Obstinado" em seu Cemitério; Invoque o alvo por Invocação-Especial. Você não pode Invocar quaisquer monstros por Invocação-Especial durante o turno em que ativar este efeito, exceto por monstros "Boxeador Obstinado".
+    Quando este card for Invocado por Invocação-Normal: você pode escolher 1 monstro "Boxeador Obstinado" no seu Cemitério; Invoque-o por Invocação-Especial. Você não pode Invocar quaisquer monstros por Invocação-Especial durante o turno em que ativar este efeito, exceto monstros "Boxeador Obstinado".
   ja: |-
     このカードの効果を発動するターン、自分は「ＢＫ」モンスターしか特殊召喚できない。①：このカードが召喚した時、自分の墓地の「ＢＫ」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
