--- a/data/cards/69537999.yaml
+++ b/data/cards/69537999.yaml
@@ -10,14 +10,14 @@ name:
   ja: ブレイズ・キャノン
   ja_romaji: Bureizu Kyanon
   ko: 브레이즈 캐논
-  ko_rr:
+  ko_rr: Beulleijeu Kaenon
   zh-TW: 烈焰加農砲
   zh-CN: 烈焰加农炮
 text:
   en: |-
     You can target 1 monster your opponent controls; send 1 Pyro monster with 500 or less ATK from your hand to the GY, and if you do, destroy that target. Your monsters cannot attack the turn you activate this effect.
   de: |-
-    Du kannst 1 Monster wählen, das dein Gegner kontrolliert; lege 1 Pyro-Monster mit 500 oder weniger ATK von deiner Hand auf den Friedhof und falls du dies tust, zerstöre das gewählte Ziel. Deine Monster können in dem Spielzug, in dem du diesen Effekt aktivierst, nicht angreifen.
+    Du kannst 1 Monster wählen, das dein Gegner kontrolliert; lege 1 Pyro-Monster mit 500 oder weniger ATK von deiner Hand auf den Friedhof und falls du dies tust, zerstöre jenes gewählte Ziel. Deine Monster können in dem Spielzug, in dem du diesen Effekt aktivierst, nicht angreifen.
   es: |-
     Puedes seleccionar 1 monstruo que controle tu adversario; manda al Cementerio 1 monstruo Piro con 500 ATK o menos en tu mano y, si lo haces, destruye ese objetivo. Tus monstruos no pueden atacar en el turno en el que activas este efecto.
   fr: |-
@@ -25,7 +25,7 @@ text:
   it: |-
     Puoi scegliere come bersaglio 1 mostro controllato dal tuo avversario; manda 1 mostro Pyro con ATK 500 o inferiore dalla tua mano al Cimitero e, se lo fai, distruggi quel bersaglio. I tuoi mostri non possono attaccare nel turno in cui attivi questo effetto.
   pt: |-
-    Você pode escolher 1 monstro que seu oponente controla; envie 1 monstro Piro com 500 ou menos de ATK da sua mão para o Cemitério e, se isso acontecer, destrua o alvo. Seus monstros não podem atacar no turno em que você ativar este efeito.
+    Você pode escolher 1 monstro que seu oponente controla; envie 1 monstro Piro com 500 ou menos de ATK da sua mão para o Cemitério e, se isso acontecer, destrua o alvo. Seus monstros não podem atacar no turno em que ativar este efeito.
   ja: |-
     ①：相手フィールドのモンスター１体を対象としてこの効果を発動できる（この効果を発動するターン、自分のモンスターは攻撃できない）。手札から攻撃力５００以下の炎族モンスター１体を墓地へ送り、対象の相手モンスターを破壊する。
   ko: |-
