--- a/data/cards/69750546.yaml
+++ b/data/cards/69750546.yaml
@@ -10,7 +10,7 @@ name:
   ja: ヴォルカニック・バックショット
   ja_romaji: Vorukanikku Bakkushotto
   ko: 볼캐닉 백샷
-  ko_rr:
+  ko_rr: Bolkaenik Baeksyat
   zh-TW:
   zh-CN: 火山鹿弹
 text:
@@ -19,13 +19,13 @@ text:
   de: |-
     Falls diese Karte auf den Friedhof gelegt wird: Füge deinem Gegner 500 Schaden zu. Falls diese Karte durch den Effekt einer „Glutbeschleuniger“-Karte auf den Friedhof gelegt wird: Du kannst 2 „Vulkanischer Streuschuss“ von deiner Hand und/oder deinem Deck auf den Friedhof legen; zerstöre alle Monster, die dein Gegner kontrolliert.
   es: |-
-    Si esta carta es mandada al Cementerio: inflígele 500 puntos de daño a tu adversario. Si esta carta es mandada al Cementerio por el efecto de una carta "Acelerador de Llama": puedes mandar al Cementerio 2 "Disparo Disperso Volcánico" de tu mano y/o Deck; destruye todos los monstruos que controle tu adversario.
+    Si esta carta es mandada al Cementerio: inflige 500 puntos de daño a tu adversario. Si esta carta es mandada al Cementerio por el efecto de una carta "Acelerador de Llama": puedes mandar al Cementerio 2 "Disparo Disperso Volcánico" en tu mano y/o Deck; destruye todos los monstruos que controle tu adversario.
   fr: |-
-    Si cette carte est envoyée au Cimetière : infligez 500 points de dommages à votre adversaire. Si cette carte est envoyée au Cimetière par l'effet d'une carte "Accélérateur de Flammes" : vous pouvez envoyer au Cimetière 2 "Cartouche de Chasse Volcanique" depuis votre main et/ou Deck ; détruisez tous les monstres contrôlés par votre adversaire.
+    Si cette carte est envoyée au Cimetière : infligez 500 points de dommages à votre adversaire. Si cette carte est envoyée au Cimetière par l'effet d'une carte "Accélérateur de Flammes" : vous pouvez envoyer 2 "Cartouche de Chasse Volcanique" depuis votre main et/ou Deck au Cimetière ; détruisez tous les monstres contrôlés par votre adversaire.
   it: |-
     Se questa carta viene mandata al Cimitero: infliggi 500 danni al tuo avversario. Se questa carta viene mandata al Cimitero dall'effetto di una carta "Acceleratore Fiammata": puoi mandare 2 "Spartitore Vulcanico" dalla tua mano e/o Deck al Cimitero; distruggi tutti i mostri controllati dal tuo avversario.
   pt: |-
-    Quando esta carta é enviada ao Cemitério, inflige 500 pontos de dano ao seu oponente. Se esta carta é enviada ao Cemitério pelo efeito de alguma carta com "Blaze Accelerator" no nome, você pode enviar 2 "Volcanic Scattershot" da sua mão ou Deck ao Cemitério para destruir todos os monstros do seu oponente.
+    Se este card for enviado para o Cemitério: cause 500 de dano ao seu oponente. Se este card for enviado para o Cemitério pelo efeito de um card "Acelerador de Explosão": você pode enviar 2 "Disparo Dispersivo Vulcânico" da sua mão e/ou Deck para o Cemitério; destrua todos os monstros que seu oponente controla.
   ja: |-
     ①：このカードが墓地へ送られた場合に発動する。相手に５００ダメージを与える。②：このカードが「ブレイズ・キャノン」カードの効果で墓地へ送られた場合、手札・デッキから「ヴォルカニック・バックショット」２体を墓地へ送って発動できる。相手フィールドのモンスターを全て破壊する。
   ko: |-
