--- a/data/cards/83315222.yaml
+++ b/data/cards/83315222.yaml
@@ -2,25 +2,30 @@ konami_id: 18924
 password: 83315222
 name:
   en: Battlin' Boxer Promoter
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Unermüdlicher Boxer Promoter
+  es: Boxeador Indómito Promotor
+  fr: Boxeur Indomptable Promoteur
+  it: Pugile Indomito Promotore
+  pt: Boxeador Obstinado Promotor
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> プロモーター
   ja_romaji: Bāningu Nakkurā Puromōtā
-  ko: BK 프로모터
-  ko_rr:
+  ko: <ruby>BK<rt>버닝나쿠라</rt></ruby> 프로모터
+  ko_rr: Beoningnakura Peuromoteo
   zh-TW:
   zh-CN: BK 赛事承办员
 text:
   en: |-
     If your opponent controls a monster: You can Special Summon this card from your hand. You can Tribute this card; Special Summon up to 2 "Battlin' Boxer" monsters with different names from your Deck, except "Battlin' Boxer Promoter". You can banish this card from your GY; increase or decrease the Levels of all "Battlin' Boxer" monsters you currently control by 1. You can only use each effect of "Battlin' Boxer Promoter" once per turn, also you cannot Special Summon monsters during the turn you activate any of this card's effects, except "Battlin' Boxer" monsters.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls dein Gegner ein Monster kontrolliert: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Du kannst diese Karte als Tribut anbieten; beschwöre bis zu 2 „Unermüdlicher Boxer“-Monster mit unterschiedlichen Namen als Spezialbeschwörung von deinem Deck, außer „Unermüdlicher Boxer Promoter“. Du kannst diese Karte von deinem Friedhof verbannen; erhöhe oder verringere die Stufen aller „Unermüdlicher Boxer“-Monster, die du derzeit kontrollierst, um 1. Du kannst jeden Effekt von „Unermüdlicher Boxer Promoter“ nur einmal pro Spielzug verwenden, zusätzlich kannst du während des Spielzugs, in dem du einen der Effekte dieser Karte aktivierst, keine Monster als Spezialbeschwörung beschwören, außer „Unermüdlicher Boxer“-Monstern.
+  es: |-
+    Si tu adversario controla un monstruo: puedes Invocar esta carta de Modo Especial desde tu mano. Puedes Sacrificar esta carta; Invoca de Modo Especial, desde tu Deck, hasta 2 monstruos "Boxeador Indómito" con nombres diferentes, excepto "Boxeador Indómito Promotor". Puedes desterrar esta carta en tu Cementerio; aumenta o reduce en 1 los Niveles de todos los monstruos "Boxeador Indómito" que controles en este momento. Sólo puedes usar cada efecto de "Boxeador Indómito Promotor" una vez por turno, y además no puedes Invocar monstruos de Modo Especial durante el turno en el que actives cualquiera de los efectos de esta carta, excepto monstruos "Boxeador Indómito".
+  fr: |-
+    Si votre adversaire contrôle un monstre : vous pouvez Invoquer Spécialement cette carte depuis votre main. Vous pouvez Sacrifier cette carte ; Invoquez Spécialement max. 2 monstres "Boxeur Indomptable" de noms différents ("Boxeur Indomptable Promoteur" exclu) depuis votre Deck. Vous pouvez bannir cette carte depuis votre Cimetière ; augmentez ou réduisez le Niveau de tous les monstres "Boxeur Indomptable" que vous contrôlez actuellement de 1. Vous ne pouvez utiliser chaque effet de "Boxeur Indomptable Promoteur" qu'une fois par tour, et aussi, vous ne pouvez pas Invoquer Spécialement de monstres (monstres "Boxeur Indomptable" exclus) durant le tour où vous activez un effet de cette carte.
+  it: |-
+    Se il tuo avversario controlla un mostro: puoi Evocare Specialmente questa carta dalla tua mano. Puoi offrire come Tributo questa carta; Evoca Specialmente fino a 2 mostri "Pugile Indomito" con nomi diversi dal tuo Deck, eccetto "Pugile Indomito Promotore". Puoi bandire questa carta dal tuo Cimitero; aumenta o diminuisci i Livelli di tutti i mostri "Pugile Indomito" che controlli attualmente di 1. Puoi utilizzare ogni effetto di "Pugile Indomito Promotore" una sola volta per turno, inoltre non puoi Evocare Specialmente mostri durante il turno in cui attivi qualsiasi degli effetti di questa carta, eccetto mostri "Pugile Indomito".
+  pt: |-
+    Se seu oponente controlar um monstro: você pode Invocar este card por Invocação-Especial da sua mão. Você pode oferecer este card como Tributo; Invoque por Invocação-Especial até 2 monstros "Boxeador Obstinado" com nomes diferentes do seu Deck, exceto "Boxeador Obstinado Promotor". Você pode banir este card do seu Cemitério; aumente ou diminua em 1 os Níveis de todos os monstros "Boxeador Obstinado" que você controla atualmente. Você só pode usar cada efeito de "Boxeador Obstinado Promotor" uma vez por turno e, além disso, você não pode Invocar monstros por Invocação-Especial durante o turno em que ativar qualquer um dos efeitos deste card, exceto monstros "Boxeador Obstinado".
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できず、この効果を発動するターン、自分は「ＢＫ」モンスターしか特殊召喚できない。①：相手フィールドにモンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。②：このカードをリリースして発動できる。デッキから「ＢＫ プロモーター」以外の「ＢＫ」モンスターを２体まで特殊召喚する（同名カードは１枚まで）。③：墓地のこのカードを除外して発動できる。自分フィールドの「ＢＫ」モンスターのレベルを全て１つ上げるか全て１つ下げる。
   ko: |-
