--- a/data/cards/83533296.yaml
+++ b/data/cards/83533296.yaml
@@ -2,15 +2,15 @@ konami_id: 18913
 password: 83533296
 name:
   en: Salamangreat Charge
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Grosalamander-Verstärkung
+  es: Carga Salamangrande
+  fr: Charge Salamangrande
+  it: Carica Salamagna
+  pt: Investida Salamagrande
   ja: <ruby>転生炎獣の炎軍<rt>サラマングレイト・チャージ</rt></ruby>
   ja_romaji: Saramangureito Chāji
   ko: 샐러맨그레이트 차지
-  ko_rr:
+  ko_rr: Saelleomaen-geureiteu Chaji
   zh-TW:
   zh-CN: 转生炎兽的炎军
 text:
@@ -19,11 +19,31 @@ text:
     ● Target 3 of your FIRE monsters that are banished and/or in your GY; shuffle 2 of the 3 into the Deck, and if you do, Special Summon the remaining monster, but for the rest of this turn, its effects are negated, also it cannot attack.
     ● If you control a FIRE Ritual, Fusion, Synchro, Xyz, or Link Monster(s) whose current ATK is different from its original ATK: You can target 1 card on the field; destroy it.
     You can only activate 1 "Salamangreat Charge" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Aktiviere 1 dieser Effekte;
+    ● Wähle 3 deiner FEUER Monster, die verbannt sind und/oder sich in deinem Friedhof befinden; mische 2 der 3 ins Deck und falls du dies tust, beschwöre das verbleibende Monster als Spezialbeschwörung, aber für den Rest dieses Spielzugs werden seine Effekte annulliert, zusätzlich kann es nicht angreifen.
+    ● Falls du ein oder mehr FEUER Ritual-, Fusions-, Synchro-, Xyz- oder Linkmonster kontrollierst, deren derzeitige ATK unterschiedlich von ihren Grund-ATK sind: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre sie.
+    Du kannst nur 1 „Grosalamander-Verstärkung“ pro Spielzug aktivieren.
+  es: |-
+    Activa 1 de estos efectos;
+    ● Selecciona 3 de tus monstruos de FUEGO que estén desterrados y/o en tu Cementerio; baraja al Deck 2 de los 3 y, si lo haces, Invoca el monstruo restante de Modo Especial, pero por el resto de este turno, sus efectos son negados, y además no puede atacar.
+    ● Si controlas uno o más Monstruos de Ritual, Fusión, Sincronía, Xyz o Enlace de FUEGO cuyos ATK en este momento sean diferentes de sus ATK originales: puedes seleccionar 1 carta en el Campo; destrúyela.
+    Sólo puedes activar 1 "Carga Salamangrande" por turno.
+  fr: |-
+    Activez 1 de ces effets ;
+    ● Ciblez 3 de vos monstres FEU qui sont bannis et/ou dans votre Cimetière ; mélangez 2 des 3 dans le Deck, et si vous le faites, Invoquez Spécialement le monstre restant, mais le reste de ce tour, ses effets sont annulés, et aussi, il ne peut pas attaquer.
+    ● Si vous contrôlez un ou plusieurs Monstres Rituel, Fusion, Synchro, Xyz ou Lien FEU dont l'ATK actuelle est différente de leur ATK d'origine : vous pouvez cibler 1 carte sur le Terrain ; détruisez-la.
+    Vous ne pouvez activer qu'1 "Charge Salamangrande" par tour.
+  it: |-
+    Attiva 1 di questi effetti;
+    ● Scegli come bersaglio 3 dei tuoi mostri FUOCO che sono banditi e/o nel tuo Cimitero; mischia 2 dei 3 nel Deck e, se lo fai, Evoca Specialmente il mostro rimanente, ma, per il resto di questo turno, i suoi effetti sono annullati, inoltre esso non può attaccare.
+    ● Se controlli uno o più Mostri Rituale, Fusione, Synchro, Xyz o Link FUOCO il cui ATK attuale è diverso dal loro ATK originale: puoi scegliere come bersaglio 1 carta sul Terreno; distruggila.
+    Puoi attivare solo 1 "Carica Salamagna" per turno.
+  pt: |-
+    Ative 1 desses efeitos;
+    ● Escolha 3 dos seus monstros de FOGO que estiverem banidos e/ou no seu Cemitério; embaralhe 2 dos 3 no Deck e, se isso acontecer, Invoque por Invocação-Especial o monstro restante, mas pelo resto deste turno, seus efeitos são negados e, além disso, ele não pode atacar.
+    ● Se você controlar um ou mais Monstros de Ritual, de Fusão, Sincro, Xyz ou Link de FOGO cujo ATK atual seja diferente do seu ATK original: você pode escolher 1 card no campo; destrua-o.
+    Você só pode ativar 1 "Investida Salamagrande" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：以下の効果から１つを選択して発動できる。
     ●自分の墓地・除外状態の炎属性モンスター３体を対象として発動できる。その３体の内の２体をデッキに戻し、残りの１体を特殊召喚する。この効果で特殊召喚したモンスターはこのターン、効果が無効化され、攻撃できない。
