--- a/data/cards/85121942.yaml
+++ b/data/cards/85121942.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>Ｃ<rt>カオス</rt></ruby><ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>１０５ <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> <ruby>彗<rt>すい</rt></ruby><ruby>星<rt>せい</rt></ruby>のカエストス
   ja_romaji: Kaosu Nanbāzu Hyakugo Bāningu Nakkurā Suisei no Kaesutosu
   ko: <ruby>CNo.<rt>카오스 넘버즈</rt></ruby>105 <ruby>BK<rt>버닝나쿠라</rt></ruby> 혜성의 카에스투스
-  ko_rr:
+  ko_rr: Kaoseu Neombeojeu Baek-o Beoningnakura Hyeseong-ui Kaeseutoseu
   zh-TW: CNo.105 燃燒拳鬥士 彗星拳帶
   zh-CN: 混沌No.105 燃烧拳击手 彗星之指套拳王
 text:
@@ -20,24 +20,24 @@ text:
     ● Once per turn: You can detach 1 material from this card, then target 1 monster your opponent controls; destroy it, and if you destroyed a face-up monster, inflict damage to your opponent equal to the ATK that monster had on the field.
   de: |-
     4 Monster der Stufe 5
-    Wenn diese Karte ein Monster deines Gegners durch Kampf zerstört und auf den Friedhof legt: Füge deinem Gegner Schaden in Höhe der Hälfte der Grund-ATK des zerstörten Monsters zu. Falls diese Karte „Nummer 105: Unermüdlicher Boxer Star Cestus“ als Xyz-Material hat, erhält sie diesen Effekt.
-    ● Einmal pro Spielzug: Du kannst 1 Xyz-Material von dieser Karte abhängen und dann 1 Monster wählen, das dein Gegner kontrolliert; zerstöre es und falls du dies tust, füge deinem Gegner Schaden in Höhe der ATK des zerstörten Monsters auf dem Spielfeld zu.
+    Falls diese Karte ein Monster eines Gegners durch Kampf zerstört und auf den Friedhof legt: Füge deinem Gegner Schaden in Höhe der Hälfte der Grund-ATK des zerstörten Monsters zu. Falls diese Karte „Nummer 105: Unermüdlicher Boxer Star Cestus“ als Material hat, erhält sie diesen Effekt.
+    ● Einmal pro Spielzug: Du kannst 1 Material von dieser Karte abhängen und dann 1 Monster wählen, das dein Gegner kontrolliert; zerstöre es und falls du ein offenes Monster zerstört hast, füge deinem Gegner Schaden in Höhe der ATK zu, die jenes Monster auf dem Spielfeld hatte.
   es: |-
     4 monstruos de Nivel 5
-    Cuando esta carta destruye un monstruo de tu adversario en batalla y lo manda al Cementerio: inflige daño a tu adversario igual a la mitad del ATK original del monstruo destruido. Si esta carta tiene a "Número 105: Boxeador Indómito Cestus Estelar" como Material Xyz, gana este efecto.
-    ● Una vez por turno: puedes desacoplar de esta carta 1 Material Xyz, y después seleccionar 1 monstruo que controle tu adversario; destrúyelo y, si lo haces, inflige daño a tu adversario igual al ATK en el Campo del monstruo destruido.
+    Si esta carta destruye un monstruo del adversario en batalla y lo manda al Cementerio: inflige daño a tu adversario igual a la mitad del ATK original del monstruo destruido. Si esta carta tiene "Número 105: Boxeador Indómito Cestus Estelar" como material, gana este efecto.
+    ● Una vez por turno: puedes desacoplar 1 material de esta carta, y después seleccionar 1 monstruo que controle tu adversario; destrúyelo y, si destruiste un monstruo boca arriba, inflige daño a tu adversario igual al ATK que ese monstruo tenía en el Campo.
   fr: |-
     4 monstres de Niveau 5
-    Lorsque cette carte détruit un monstre de votre adversaire au combat et l'envoie au Cimetière : infligez des dommages à votre adversaire égaux à la moitié de l'ATK d'origine du monstre détruit. Si cette carte a "Numéro 105 : Boxeur Indomptable Étoile Cestus" comme Matériel Xyz, elle gagne cet effet.
-    ● Une fois par tour : vous pouvez détacher 1 Matériel Xyz de cette carte, puis ciblez 1 monstre contrôlé par votre adversaire ; détruisez-le, et si vous le faites, infligez des dommages à votre adversaire égaux à l'ATK du monstre détruit sur le Terrain.
+    Si cette carte détruit un monstre de l'adversaire au combat et l'envoie au Cimetière : infligez des dommages à votre adversaire égaux à la moitié de l'ATK d'origine du monstre détruit. Si cette carte a "Numéro 105 : Boxeur Indomptable Étoile Cestus" comme Matériel, elle gagne cet effet.
+    ● Une fois par tour : vous pouvez détacher 1 Matériel de cette carte, puis ciblez 1 monstre contrôlé par votre adversaire ; détruisez-le, et si vous avez détruit un monstre face recto, infligez des dommages à votre adversaire égaux à l'ATK que le monstre avait sur le Terrain.
   it: |-
     4 mostri di Livello 5
-    Quando questa carta distrugge un mostro dell'avversario in battaglia e lo manda al Cimitero: infliggi al tuo avversario danno pari alla metà dell'ATK originale del mostro distrutto. Se questa carta ha "Numero 105: Pugile Indomito Star Cestus" come Materiale Xyz, essa guadagna questo effetto.
-    ● Una volta per turno: puoi staccare 1 Materiale Xyz da questa carta, poi scegliere come bersaglio 1 mostro controllato dal tuo avversario; distruggilo e, se lo fai, infliggi al tuo avversario danno pari all'ATK sul Terreno del mostro distrutto.
+    Se questa carta distrugge un mostro dell'avversario in battaglia e lo manda al Cimitero: infliggi al tuo avversario danno pari alla metà dell'ATK originale del mostro distrutto. Se questa carta ha "Numero 105: Pugile Indomito Star Cestus" come materiale, essa guadagna questo effetto.
+    ● Una volta per turno: puoi staccare 1 materiale da questa carta, poi scegliere come bersaglio 1 mostro controllato dal tuo avversario; distruggilo e, se hai distrutto un mostro scoperto, infliggi al tuo avversario danno pari all'ATK che quel mostro aveva sul Terreno.
   pt: |-
     4 monstros de Nível 5
-    Quando este card destruir um monstro do oponente em batalha e enviá-lo para o Cemitério: cause dano ao sue oponente igual à metade do ATK original do monstro destruído. Se este card tiver "Número 105: Boxeador Obstinado Estrela Cestus" como uma Matéria Xyz, ele ganha este efeito.
-    ● Uma vez por turno: você pode desassociar 1 Matéria deste card e, depois, escolher 1 monstro que seu oponente controla; destrua-o e, se isso acontecer, cause dano ao seu oponente igual ao ATK do monstro destruído no campo.
+    Se este card destruir um monstro do oponente em batalha e enviá-lo para o Cemitério: cause dano ao seu oponente igual à metade do ATK original do monstro destruído. Se este card tiver "Número 105: Boxeador Obstinado Estrela Cestus" como matéria, ele ganha este efeito.
+    ● Uma vez por turno: você pode desassociar 1 matéria deste card e, depois, escolha 1 monstro que seu oponente controla; destrua-o e, se você destruiu um monstro com a face para cima, cause dano ao seu oponente igual ao ATK que esse monstro tinha no campo.
   ja: |-
     レベル５モンスター×４
     ①：このカードが戦闘でモンスターを破壊し墓地へ送った場合に発動する。そのモンスターの元々の攻撃力の半分のダメージを相手に与える。②：このカードが「Ｎｏ．１０５ ＢＫ 流星のセスタス」をＸ素材としている場合、以下の効果を得る。●１ターンに１度、このカードのＸ素材を１つ取り除き、相手フィールドのモンスター１体を対象として発動できる。そのモンスターを破壊し、表側表示モンスターを破壊した場合、その攻撃力分のダメージを相手に与える。
